ADD payments cat format en

--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -252,6 +252,7 @@
 ***** xref:daten:lager-exportieren.adoc[Lager]
 ***** xref:daten:warenbestand-exportieren.adoc[Warenbestände]
 ***** xref:daten:warenbewegung-exportieren.adoc[Warenbewegungen]
+***** xref:daten:zahlungen-exportieren.adoc[Zahlungen]
 ** xref:daten:datenlog.adoc[Daten-Log]
 ** xref:daten:datenbereinigung.adoc[Datenbereinigung]
 ** xref:daten:backup.adoc[Datenbank-Backup]
