--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -247,6 +247,7 @@
 ***** xref:data:exporting-warehouse-data.adoc[Warehouses]
 ***** xref:data:exporting-stocks.adoc[Stocks]
 ***** xref:data:exporting-stock-movements.adoc[Stock movements]
+***** xref:data:exporting-payments.adoc[Payments]
 ** xref:data:datalog.adoc[Data log]
 ** xref:data:data-cleansing.adoc[Data cleansing]
 ** xref:data:backup.adoc[Database backup]
