--- a/docs/de-de/modules/daten/pages/elasticSync-lager.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-lager.adoc
@@ -69,7 +69,7 @@ Gib die ID des Lagerorts in deine CSV-Datei ein. Dies gilt nur für bestehende L
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#1500[Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#1500[Einrichtung » Waren » Lager » [Lager wählen\] » Lagerorte].
 
 '''
 
@@ -129,7 +129,7 @@ Welchen Verwendungszweck hat der Lagerort?
 |box (für die xref:app:rollende-kommissionierung.adoc#[Rollende Kommissionierung])
 |====
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#intable-zweck[Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#intable-zweck[Einrichtung » Waren » Lager » [Lager wählen\] » Lagerorte].
 
 '''
 
@@ -161,7 +161,7 @@ Welchen Status hat der Lagerort?
 |reserved
 |====
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#intable-status[Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#intable-status[Einrichtung » Waren » Lager » [Lager wählen\] » Lagerorte].
 
 '''
 
@@ -174,7 +174,7 @@ Gib die Position des Lagerorts in deine CSV-Datei ein. Durch die Postion der Lag
 
 *_Zulässige Importwerte_*: Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#100[Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#100[Einrichtung » Waren » Lager » [Lager wählen\] » Lagerorte].
 
 '''
 
@@ -206,7 +206,7 @@ Gib den Lagerorttyp je nach Artikelgröße in deine CSV-Datei ein.
 |Europalette
 |====
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:wareneingaenge-verwalten.adoc#intable-lagerorttyp[Artikel » Artikel bearbeiten » [Artikel öffnen] » Tab: ID einer Variante » Tab: Lager » Spalte: Lagerorttyp].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:wareneingaenge-verwalten.adoc#intable-lagerorttyp[Artikel » Artikel bearbeiten » [Artikel öffnen\] » Tab: ID einer Variante » Tab: Lager » Spalte: Lagerorttyp].
 
 '''
 
@@ -219,7 +219,7 @@ Gib Notizen zum Lagerort in deine CSV-Datei ein.
 
 *_Zulässige Importwerte_*: Alphanumerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#intable-notizen[Einrichtung » Waren » Lager » [Lager wählen] » Lagerorte » [Lagerort wählen]].
+Das Ergebnis des Imports findest du im Backend im Menü xref:warenwirtschaft:lager-einrichten.adoc#intable-notizen[Einrichtung » Waren » Lager » [Lager wählen\] » Lagerorte » [Lagerort wählen\]].
 
 '''
 
