--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -35,6 +35,8 @@ Zugang zu Kaufland.de einrichten:
 
 . Öffne das Menü *Einrichtung » Märkte » Kaufland.de » Einstellungen*.
 . Öffne das Untermenü des Mandanten, bei dem du den Zugang einrichten möchtest.
+//. Klicke auf *Neues Konto*. +
+//*_Hinweis:_* Du kannst schon jetzt den Zugang zu mehreren Kaufland-Konten einrichten. Im Moment können aber nur mit einem Kaufland-Konto Daten ausgetauscht werden. Das Nutzen mehrerer Konten wird in den nächsten Wochen möglich sein. (Stand: 31.03.2022)
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#einstellungen-Kaufland-de>>.
 . Speichere (icon:save[set=plenty]) die Einstellungen.
 
@@ -45,8 +47,8 @@ Zugang zu Kaufland.de einrichten:
 |Einstellung |Erläuterung
 
 | *Schnittstelle zu Kaufland.de aktivieren*
-a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. +
-* *Nein* = Schnittstelle zu Kaufland.de nicht aktivieren.
+a| * *Ja* = Schnittstelle zu Kaufland.de aktivieren. Daten werden mit Kaufland ausgetauscht.
+* *Nein* = Schnittstelle zu Kaufland.de nicht aktivieren. Es werden keine Daten mit Kaufland ausgetauscht.
 
 2+^| API-Daten
 
