--- a/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen.adoc
+++ b/docs/de-de/modules/_includes/pages/neue-eigenschaften-erstellen.adoc
@@ -420,7 +420,7 @@ Welcher Mehrwertsteuersatz für die Variante gespeichert ist, siehst du im Menü
 ! *Steuersatz A, B, C, D*
 !Wähle diese Option (icon:check-square[role="blue"]), wenn _ein bestimmter Mehrwertsteuersatz_ auf den eingegebenen Aufschlag berechnet werden soll.
 
-Die einzelnen Umsatzsteuersätze findest du im Menü xref:auftraege:buchhaltung.adoc#550[Einrichtung » Mandant » [Mandant wählen] » Standorte » [Standort wählen] » Buchhaltung » Tab: Umsatzsteuersätze » [Konfiguration öffnen]].
+Die einzelnen Umsatzsteuersätze findest du im Menü xref:auftraege:buchhaltung.adoc#550[Einrichtung » Mandant » [Mandant wählen\] » Standorte » [Standort wählen] » Buchhaltung » Tab: Umsatzsteuersätze » [Konfiguration öffnen\]].
 !======
 
 | *Bestelloptionen*
