fix partial links - DE+EN

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -471,7 +471,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#shipping-confirmation-kaufland>>
 
-include::../_includes/textblocks/instructions/EA.adoc[]
+include::_includes:page$EA.adoc[]
 
 [[shipping-confirmation-kaufland]]
 .Event procedure to send shipping confirmations to {market}
@@ -636,7 +636,7 @@ Set up an xref:automation:event-procedures.adoc#[event procedure] to automatical
 
 :table-event-procedure: <<#in-fulfillment-kaufland>>
 
-include::../_includes/textblocks/instructions/EA.adoc[]
+include::_includes:page$EA.adoc[]
 
 [[in-fulfillment-kaufland]]
 .Event procedure to send in fulfilment confirmations to {market}
