--- a/docs/de-de/modules/pos/pages/pos.adoc
+++ b/docs/de-de/modules/pos/pages/pos.adoc
@@ -6,7 +6,7 @@
 [#100]
 == Was ist plentyPOS?
 
-plentyPOS (*Point of Sale*) ist unser eigens entwickeltes Kassensystem, mit dem du den stationären Handel im Ladengeschäft mühelos abwickelst. Die Funktionalitäten von plentyPOS werden über die link:https://knowledge.plentymarkets.com/app[plentymarkets App^] bereitgestellt. 
+plentyPOS (*Point of Sale*) ist unser eigens entwickeltes Kassensystem, mit dem du den stationären Handel im Ladengeschäft mühelos abwickelst. Die Funktionalitäten von plentyPOS werden über die link:https://knowledge.plentymarkets.com/de-de/manual/main/app/app.html[plentymarkets App^] bereitgestellt. 
 Dieser Handbuchbereich bietet dir einen Überblick über alle Informationen zur Einrichtung und optimalen Nutzung von plentyPOS.
 
 [TIP]
