--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -484,7 +484,8 @@ include::_includes:page$EA.adoc[]
 | *Ereignis*
 | Ereignis wählen, zum Beispiel:
 
-* *Statuswechsel > [Status wählen, zum Beispiel [7] Warenausgang gebucht]* +
+* *Statuswechsel > [Status wählen, zum Beispiel [7] Warenausgang gebucht]*
+
 _oder_
 
 * *Auftragsänderung > Paketnummer*
