fix bullets AGAIN

--- a/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
+++ b/docs/en-gb/modules/markets/pages/kaufland-setup.adoc
@@ -475,7 +475,7 @@ include::_includes:page$EA.adoc[]
 
 [[shipping-confirmation-kaufland]]
 .Event procedure to send shipping confirmations to {market}
-[cols="1,3,3"]
+[cols="1a,3a,3a"]
 |====
 |Setting |Option |Selection
 
