--- a/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
+++ b/docs/de-de/modules/maerkte/pages/kaufland-de-einrichten.adoc
@@ -477,7 +477,7 @@ include::_includes:page$EA.adoc[]
 
 [[shipping-confirmation-kaufland]]
 .Ereignisaktion, um Versand an {market} zu melden
-[cols="1,3,3"]
+[cols="1a,3a,3a"]
 |====
 |Einstellung |Option |Auswahl
 
