FIX ebay faq link to amazon - DE+EN

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -349,8 +349,8 @@
 **** xref:markets:amazon-prime.adoc[Amazon Prime with MFN]
 ***** xref:markets:amazon-prime-orders.adoc[Processing Amazon Prime orders]
 ***** xref:markets:best-practices-amazon-prime.adoc[Best practice: Amazon Prime]
-*** xref:markets:faq.adoc[Amazon: FAQ and solutions]
-**** xref:markets:faq-collection.adoc[Amazon: FAQ collection]
+*** xref:markets:amazon-faq.adoc[Amazon: FAQ and solutions]
+**** xref:markets:amazon-faq-collection.adoc[Amazon: FAQ collection]
 **** xref:markets:best-practices-amazon-item-data-export.adoc[Amazon Best practice: Item data export]
 **** xref:markets:best-practices-amazon-fba-stock.adoc[Amazon Best practice: Amazon FBA stock display for EU and UK]
 **** xref:markets:best-practices-amazon-error-request-throttled.adoc[Amazon Best practice: Error Request is throttled]
@@ -364,10 +364,10 @@
 ** xref:markets:ebay.adoc[eBay]
 *** xref:markets:ebay-setup.adoc[Setting up eBay]
 *** xref:markets:ebay-fulfillment-by-orange-connex.adoc[eBay Fulfillment by Orange Connex]
-*** xref:markets:faq.adoc[FAQ and solutions]
+*** xref:markets:ebay-faq.adoc[eBay: FAQ and solutions]
 **** xref:markets:best-practices-ebay-activate-listings.adoc[Best practice: Activating listings]
 **** xref:markets:best-practices-ebay-out-of-stock-option.adoc[Best practice: Use out of stock-option]
-**** xref:markets:best-practices-ebay-faq.adoc[FAQ]
+**** xref:markets:best-practices-ebay-faq.adoc[ebay: FAQ]
 *** xref:markets:ebay-plugins.adoc[eBay Plugins]
 **** xref:markets:eBay-analytics.adoc[eBay Analytics]
 **** xref:markets:eBay-feedback.adoc[eBay Feedback]
