--- a/docs/de-de/modules/maerkte/pages/ebay-faq.adoc
+++ b/docs/de-de/modules/maerkte/pages/ebay-faq.adoc
@@ -1,4 +1,4 @@
-= FAQ und Lösungen
+= eBay: FAQ und Lösungen
 :page-layout: overview
 :keywords:
 :description: Multi-Channel in plentymarkets: Lösungen und Empfehlungen für den Marktplatz eBay.
