--- a/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
+++ b/docs/de-de/modules/daten/pages/standardformate-exportieren.adoc
@@ -19,7 +19,7 @@ NOTE: Bisher kannst du noch nicht alle Arten von Daten über Kataloge exportiere
 [#catalogue-menu]
 == Erstes Kennenlernen: Menüaufbau
 
-image::daten/daten-exportieren/assets/menüaufbau-standardformat.png[]
+image::maerkte:menüaufbau-standardformat.png[]
 _Menüaufbau Katalog mit Standardformat_
 
 [cols="1,3a"]
