ADD section about new ui to the main page; FIX a few small issues noticed while doing so

--- a/docs/en-gb/modules/item/partials/item-introduction.adoc
+++ b/docs/en-gb/modules/item/partials/item-introduction.adoc
@@ -1,5 +1,5 @@
 ////
-zuletzt bearbeitet 02.03.2022
+zuletzt bearbeitet 01.04.2022
 ////
 
 PIM stands for [.underline]##P##roduct [.underline]##I##nformation [.underline]##M##anagement.
@@ -46,8 +46,9 @@ Ready to start entering item data into plentymarkets?
 Or do you want to send product information back and forth between your own plentymarkets system and other external systems?
 There are many options for importing, exporting and manually editing item data records.
 
-[discrete]
-==== Import
+[.collapseBox]
+.*Import*
+--
 
 [cols="2*", width=100%, grid=cols, frame=none, stripes=none]
 |====
@@ -65,8 +66,11 @@ a| *_Other imports_*:
 * xref:data:rest-api.adoc#[Importing items from other systems with the REST-API].
 |====
 
-[discrete]
-==== Export
+--
+
+[.collapseBox]
+.*Export*
+--
 
 [cols="2*", width=100%, grid=cols, frame=none, stripes=none]
 |====
@@ -82,8 +86,11 @@ a| *_FormatDesigner + Elastischer Export_*:
 * xref:data:item.adoc#[Directory of all data fields for exporting items (FormatDesigner)]
 |====
 
-[discrete]
-==== Manual processing
+--
+
+[.collapseBox]
+.*Manual processing*
+--
 
 [cols="2*", width=100%, grid=cols, frame=none, stripes=none]
 |====
@@ -91,7 +98,8 @@ a| *_FormatDesigner + Elastischer Export_*:
 a| *_New item UI (open beta)_*:
 
 * xref:item:search.adoc#[Searching for items]
-* xref:item:detail-view.adoc#[Detail view: Design].
+* xref:item:detail-view.adoc#[Detail view: Design]
+* xref:item:manually-create-item.adoc#[Manually creating items and variations]
 
 a| *_Old item UI_*:
 
@@ -99,6 +107,8 @@ a| *_Old item UI_*:
 * xref:item:managing-items.adoc#[Directory of all item data fields]
 * xref:item:mass-processing.adoc#[Editing multiple items at once]
 |====
+
+--
 
 //end::import-export-create[]
 
@@ -135,3 +145,19 @@ This chapter also shows you how to set up additional functions for displaying yo
 * xref:item:cross-selling.adoc#[Cross-selling]
 * xref:item:store-specials.adoc#[Store specials]
 //end::appearance-webshop[]
+
+[#600]
+== New item UI (open beta)
+
+This chapter describes the new item UI, which entered the open beta phase in March, 2022.
+
+* UI stands for [.underline]##U##ser [.underline]##I##nterface.
+With the phrase "new item UI", we mean that there is a new menu for managing item data in plentymarkets.
+* Open beta means that you can see and test the new item UI.
+However, the new item UI does not yet include every function.
+
+In this chapter, you’ll learn how to:
+
+* xref:item:search.adoc#[search for items and variations]
+* xref:item:detail-view.adoc#[customise the detail view to meet your needs]
+* xref:item:manually-create-item.adoc#[manually create items and variations]
