--- a/docs/en-gb/modules/item/pages/manually-create-item.adoc
+++ b/docs/en-gb/modules/item/pages/manually-create-item.adoc
@@ -10,7 +10,6 @@ zuletzt bearbeitet 11.03.22
 
 //ToDo - gifs erstellen
 //ToDo - sobald der Artikeltyp bei der Anlage auswählbar ist, die Inhalte überarbeiten und sichtbar schalten
-//ToDo - sobald der Vorschau möglich ist, die Inhalte überarbeiten und sichtbar schalten
 //ToDo - bei Anker 400 - Links ergänzen sobald die neue Verzeichnisseite live ist
 //ToDo - langfristig: video erstellen
 
@@ -25,7 +24,7 @@ This page teaches you how to manually create items and variations.
 * Create the xref:item:manually-create-item.adoc#200[item data record].
 * Should the item be available e.g. in various sizes or colours? Then create xref:item:manually-create-item.adoc#300[all of the necessary variations].
 * Add xref:item:manually-create-item.adoc#400[further product data] like images, texts and stock information.
-//* Regularly xref:item:manually-create-item.adoc#500[preview the item in plentyShop] and see where you need to add more product data or adjust the settings.
+* Regularly xref:item:manually-create-item.adoc#500[preview the item in plentyShop] and see where you need to add more product data or adjust the settings.
 * xref:item:manually-create-item.adoc#600[Activate the item] once it’s ready to be sold.
 
 [TIP]
