feat: add changelog March 30, 2022

--- a/docs/de-de/modules/changelog/pages/2022-03-23.adoc
+++ b/docs/de-de/modules/changelog/pages/2022-03-23.adoc
@@ -1,8 +1,7 @@
-= plentymarkets Changelog
+= Changelog 16. März 2022
 :author: kevin-stederoth
 :sectnums!:
 :page-index: false
-:id:
 :startWeekDate: 17. März 2022
 :endWeekDate: 23. März 2022
 
