--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -668,139 +668,142 @@
 **** xref:videos:tagesabschluss.adoc[Beende erfolgreich den Tag mit dem Tagesabschluss!]
 ** xref:videos:warenwirtschaft.adoc[Warenwirtschaft]
 *** xref:videos:lager-anlegen-und-verwalten.adoc[Lager anlegen und verwalten]
-* xref:changelog:changelog.adoc[plentymarkets Changelog]
-** xref:changelog:march-2022.adoc[Changelogs März 2022]
-*** xref:changelog:2022-03-16.adoc[Changelog 16. März 2022]
-*** xref:changelog:2022-03-09.adoc[Changelog 09. März 2022]
-*** xref:changelog:2022-03-02.adoc[Changelog 02. März 2022]
-** xref:changelog:february-2022.adoc[Changelogs Februar 2022]
-*** xref:changelog:2022-02-23.adoc[Changelog 23. Februar 2022]
-*** xref:changelog:2022-02-16.adoc[Changelog 16. Februar 2022]
-*** xref:changelog:2022-02-09.adoc[Changelog 09. Februar 2022]
-*** xref:changelog:2022-02-02.adoc[Changelog 02. Februar 2022]
-** xref:changelog:januar-2022.adoc[Changelogs Januar 2022]
-*** xref:changelog:2022-01-26.adoc[Changelog 26. Januar 2022]
-*** xref:changelog:2022-01-19.adoc[Changelog 19. Januar 2022]
-*** xref:changelog:2022-01-12.adoc[Changelog 12. Januar 2022]
-*** xref:changelog:2022-01-05.adoc[Changelog 05. Januar 2022]
-** xref:changelog:archiv-2021.adoc[Archiv: 2021]
-*** xref:changelog:dezember-2021.adoc[Changelogs Dezember 2021]
-**** xref:changelog:2021-12-08.adoc[Changelog 08. Dezember 2021]
-**** xref:changelog:2021-12-01.adoc[Changelog 01. Dezember 2021]
-**** xref:changelog:2021-12-15.adoc[Changelog 15. Dezember 2021]
-**** xref:changelog:2021-12-29.adoc[Changelog 29. Dezember 2021]
-**** xref:changelog:2021-12-22.adoc[Changelog 22. Dezember 2021]
-*** xref:changelog:november-2021.adoc[Changelogs November 2021]
-**** xref:changelog:2021-11-10.adoc[Changelog 10. November 2021]
-**** xref:changelog:2021-11-03.adoc[Changelog 03. November 2021]
-**** xref:changelog:2021-11-17.adoc[Changelog 17. November 2021]
-**** xref:changelog:2021-11-24.adoc[Changelog 24. November 2021]
-*** xref:changelog:oktober-2021.adoc[Changelogs Oktober 2021]
-**** xref:changelog:2021-10-27.adoc[Changelog 27. Oktober 2021]
-**** xref:changelog:2021-10-20.adoc[Changelog 20. Oktober 2021]
-**** xref:changelog:2021-10-13.adoc[Changelog 13. Oktober 2021]
-**** xref:changelog:2021-10-06.adoc[Changelog 06. Oktober 2021]
-*** xref:changelog:september-2021.adoc[Changelogs September 2021]
-**** xref:changelog:2021-09-29.adoc[Changelog 29. September 2021]
-**** xref:changelog:2021-09-22.adoc[Changelog 22. September 2021]
-**** xref:changelog:2021-09-15.adoc[Changelog 15. September 2021]
-**** xref:changelog:2021-09-08.adoc[Changelog 08. September 2021]
-**** xref:changelog:2021-09-01.adoc[Changelog 01. September 2021]
-*** xref:changelog:august-2021.adoc[Changelogs August 2021]
-**** xref:changelog:2021-08-25.adoc[Changelog 25. August 2021]
-**** xref:changelog:2021-08-18.adoc[Changelog 18. August 2021]
-**** xref:changelog:2021-08-11.adoc[Changelog 11. August 2021]
-**** xref:changelog:2021-08-04.adoc[Changelog 04. August 2021]
-*** xref:changelog:juli-2021.adoc[Changelogs Juli 2021]
-**** xref:changelog:2021-07-28.adoc[Changelog 28. Juli 2021]
-**** xref:changelog:2021-07-21.adoc[Changelog 21. Juli 2021]
-**** xref:changelog:2021-07-15.adoc[Changelog 15. Juli 2021]
-**** xref:changelog:2021-07-08.adoc[Changelog 08. Juli 2021]
-*** xref:changelog:juni-2021.adoc[Changelogs Juni 2021]
-**** xref:changelog:2021-06-30.adoc[Changelog 30. Juni 2021]
-**** xref:changelog:2021-06-23.adoc[Changelog 23. Juni 2021]
-**** xref:changelog:2021-06-17.adoc[Changelog 17. Juni 2021]
-*** xref:changelog:april-2021.adoc[Changelogs April 2021]
-**** xref:changelog:2021-04-28.adoc[Changelog 28. April 2021]
-**** xref:changelog:2021-04-21.adoc[Changelog 21. April 2021]
-**** xref:changelog:2021-04-14.adoc[Changelog 14. April 2021]
-**** xref:changelog:2021-04-07.adoc[Changelog 07. April 2021]
-*** xref:changelog:march-2021.adoc[Changelogs März 2021]
-**** xref:changelog:2021-03-31.adoc[Changelog 31. März 2021]
-**** xref:changelog:2021-03-24.adoc[Changelog 24. März 2021]
-**** xref:changelog:2021-03-17.adoc[Changelog 17. März 2021]
-**** xref:changelog:2021-03-10.adoc[Changelog 10. März 2021]
-**** xref:changelog:2021-03-03.adoc[Changelog 03. März 2021]
-*** xref:changelog:februar-2021.adoc[Changelogs Februar 2021]
-**** xref:changelog:2021-02-24.adoc[Changelog 24. Februar 2021]
-**** xref:changelog:2021-02-17.adoc[Changelog 17. Februar 2021]
-**** xref:changelog:2021-02-10.adoc[Changelog 10. Februar 2021]
-**** xref:changelog:2021-02-03.adoc[Changelog 03. Februar 2021]
-*** xref:changelog:januar-2021.adoc[Changelogs Januar 2021]
-**** xref:changelog:2021-01-27.adoc[Changelog 27. Januar 2021]
-**** xref:changelog:2021-01-20.adoc[Changelog 20. Januar 2021]
-**** xref:changelog:2021-01-13.adoc[Changelog 13. Januar 2021]
-**** xref:changelog:2021-01-06.adoc[Changelog 06. Januar 2021]
-** xref:changelog:archiv-2020.adoc[Archiv: 2020]
-*** xref:changelog:dezember-2020.adoc[Changelogs Dezember 2020]
-**** xref:changelog:2020-12-30.adoc[Changelog 30. Dezember 2020]
-**** xref:changelog:2020-12-23.adoc[Changelog 23. Dezember 2020]
-**** xref:changelog:2020-12-16.adoc[Changelog 16. Dezember 2020]
-**** xref:changelog:2020-12-09.adoc[Changelog 09. Dezember 2020]
-**** xref:changelog:2020-12-02.adoc[Changelog 02. Dezember 2020]
-*** xref:changelog:november-2020.adoc[Changelogs November 2020]
-**** xref:changelog:2020-11-25.adoc[Changelog 25. November 2020]
-**** xref:changelog:2020-11-18.adoc[Changelog 18. November 2020]
-**** xref:changelog:2020-11-11.adoc[Changelog 11. November 2020]
-**** xref:changelog:2020-11-04.adoc[Changelog 04. November 2020]
-*** xref:changelog:oktober-2020.adoc[Changelogs Oktober 2020]
-**** xref:changelog:2020-10-28.adoc[Changelog 28. Oktober 2020]
-**** xref:changelog:2020-10-21.adoc[Changelog 21. Oktober 2020]
-**** xref:changelog:2020-10-14.adoc[Changelog 14. Oktober 2020]
-**** xref:changelog:2020-10-07.adoc[Changelog 07. Oktober 2020]
-*** xref:changelog:september-2020.adoc[Changelogs September 2020]
-**** xref:changelog:2020-09-30.adoc[Changelog 30. September 2020]
-**** xref:changelog:2020-09-24.adoc[Changelog 24. September 2020]
-**** xref:changelog:2020-09-16.adoc[Changelog 16. September 2020]
-**** xref:changelog:2020-09-09.adoc[Changelog 09. September 2020]
-**** xref:changelog:2020-09-02.adoc[Changelog 02. September 2020]
-*** xref:changelog:august-2020.adoc[Changelogs August 2020]
-**** xref:changelog:2020-08-26.adoc[Changelog 26. August 2020]
-**** xref:changelog:2020-08-19.adoc[Changelog 19. August 2020]
-**** xref:changelog:2020-08-12.adoc[Changelog 12. August 2020]
-**** xref:changelog:2020-08-05.adoc[Changelog 05. August 2020]
-*** xref:changelog:juli-2020.adoc[Changelogs Juli 2020]
-**** xref:changelog:2020-07-29.adoc[Changelog 29. Juli 2020]
-**** xref:changelog:2020-07-22.adoc[Changelog 22. Juli 2020]
-**** xref:changelog:2020-07-15.adoc[Changelog 15. Juli 2020]
-**** xref:changelog:2020-07-08.adoc[Changelog 08. Juli 2020]
-*** xref:changelog:juni-2020.adoc[Changelogs Juni 2020]
-**** xref:changelog:2020-06-17.adoc[Changelog 17. Juni 2020]
-**** xref:changelog:2020-06-24.adoc[Changelog 24. Juni 2020]
-**** xref:changelog:2020-06-30.adoc[Changelog 30. Juni 2020]
-**** xref:changelog:2020-06-10.adoc[Changelog 10. Juni 2020]
-**** xref:changelog:2020-06-03.adoc[Changelog 03. Juni 2020]
-*** xref:changelog:mai-2020.adoc[Changelogs Mai 2020]
-**** xref:changelog:2020-05-27.adoc[Changelog 27. Mai 2020]
-**** xref:changelog:2020-05-20.adoc[Changelog 20. Mai 2020]
-**** xref:changelog:2020-05-13.adoc[Changelog 13. Mai 2020]
-**** xref:changelog:2020-05-06.adoc[Changelog 06. Mai 2020]
-*** xref:changelog:april-2020.adoc[Changelogs April 2020]
-**** xref:changelog:2020-04-29.adoc[Changelog 29. April 2020]
-**** xref:changelog:2020-04-22.adoc[Changelog 22. April 2020]
-**** xref:changelog:2020-04-15.adoc[Changelog 15. April 2020]
-**** xref:changelog:2020-04-08.adoc[Changelog 08. April 2020]
-**** xref:changelog:2020-04-01.adoc[Changelog 01. April 2020]
-*** xref:changelog:maerz-2020.adoc[Changelogs März 2020]
-**** xref:changelog:2020-03-25.adoc[Changelog 25. März 2020]
-**** xref:changelog:2020-03-18.adoc[Changelog 18. März 2020]
-**** xref:changelog:2020-03-11.adoc[Changelog 11. März 2020]
-**** xref:changelog:2020-03-04.adoc[Changelog 04. März 2020]
-*** xref:changelog:februar-2020.adoc[Changelogs Februar 2020]
-**** xref:changelog:2020-02-26.adoc[Changelog 26. Februar 2020]
-**** xref:changelog:2020-02-19.adoc[Changelog 19. Februar 2020]
-**** xref:changelog:2020-02-12.adoc[Changelog 12. Februar 2020]
-**** xref:changelog:2020-02-05.adoc[Changelog 05. Februar 2020]
-*** xref:changelog:januar-2020.adoc[Changelogs Januar 2020]
-**** xref:changelog:2020-01-29.adoc[Changelog 29. Januar 2020]
-**** xref:changelog:2020-01-22.adoc[Changelog 22. Januar 2020]
+
+.plentymarkets Changelog
+* xref:changelog:march-2022.adoc[Changelogs März 2022]
+** xref:changelog:2022-03-30.adoc[Changelog 30. März 2022]
+** xref:changelog:2022-03-23.adoc[Changelog 23. März 2022]
+** xref:changelog:2022-03-16.adoc[Changelog 16. März 2022]
+** xref:changelog:2022-03-09.adoc[Changelog 09. März 2022]
+** xref:changelog:2022-03-02.adoc[Changelog 02. März 2022]
+* xref:changelog:february-2022.adoc[Changelogs Februar 2022]
+** xref:changelog:2022-02-23.adoc[Changelog 23. Februar 2022]
+** xref:changelog:2022-02-16.adoc[Changelog 16. Februar 2022]
+** xref:changelog:2022-02-09.adoc[Changelog 09. Februar 2022]
+** xref:changelog:2022-02-02.adoc[Changelog 02. Februar 2022]
+* xref:changelog:januar-2022.adoc[Changelogs Januar 2022]
+** xref:changelog:2022-01-26.adoc[Changelog 26. Januar 2022]
+** xref:changelog:2022-01-19.adoc[Changelog 19. Januar 2022]
+** xref:changelog:2022-01-12.adoc[Changelog 12. Januar 2022]
+** xref:changelog:2022-01-05.adoc[Changelog 05. Januar 2022]
+* xref:changelog:archiv-2021.adoc[Archiv: 2021]
+** xref:changelog:dezember-2021.adoc[Changelogs Dezember 2021]
+*** xref:changelog:2021-12-08.adoc[Changelog 08. Dezember 2021]
+*** xref:changelog:2021-12-01.adoc[Changelog 01. Dezember 2021]
+*** xref:changelog:2021-12-15.adoc[Changelog 15. Dezember 2021]
+*** xref:changelog:2021-12-29.adoc[Changelog 29. Dezember 2021]
+*** xref:changelog:2021-12-22.adoc[Changelog 22. Dezember 2021]
+** xref:changelog:november-2021.adoc[Changelogs November 2021]
+*** xref:changelog:2021-11-10.adoc[Changelog 10. November 2021]
+*** xref:changelog:2021-11-03.adoc[Changelog 03. November 2021]
+*** xref:changelog:2021-11-17.adoc[Changelog 17. November 2021]
+*** xref:changelog:2021-11-24.adoc[Changelog 24. November 2021]
+** xref:changelog:oktober-2021.adoc[Changelogs Oktober 2021]
+*** xref:changelog:2021-10-27.adoc[Changelog 27. Oktober 2021]
+*** xref:changelog:2021-10-20.adoc[Changelog 20. Oktober 2021]
+*** xref:changelog:2021-10-13.adoc[Changelog 13. Oktober 2021]
+*** xref:changelog:2021-10-06.adoc[Changelog 06. Oktober 2021]
+** xref:changelog:september-2021.adoc[Changelogs September 2021]
+*** xref:changelog:2021-09-29.adoc[Changelog 29. September 2021]
+*** xref:changelog:2021-09-22.adoc[Changelog 22. September 2021]
+*** xref:changelog:2021-09-15.adoc[Changelog 15. September 2021]
+*** xref:changelog:2021-09-08.adoc[Changelog 08. September 2021]
+*** xref:changelog:2021-09-01.adoc[Changelog 01. September 2021]
+** xref:changelog:august-2021.adoc[Changelogs August 2021]
+*** xref:changelog:2021-08-25.adoc[Changelog 25. August 2021]
+*** xref:changelog:2021-08-18.adoc[Changelog 18. August 2021]
+*** xref:changelog:2021-08-11.adoc[Changelog 11. August 2021]
+*** xref:changelog:2021-08-04.adoc[Changelog 04. August 2021]
+** xref:changelog:juli-2021.adoc[Changelogs Juli 2021]
+*** xref:changelog:2021-07-28.adoc[Changelog 28. Juli 2021]
+*** xref:changelog:2021-07-21.adoc[Changelog 21. Juli 2021]
+*** xref:changelog:2021-07-15.adoc[Changelog 15. Juli 2021]
+*** xref:changelog:2021-07-08.adoc[Changelog 08. Juli 2021]
+** xref:changelog:juni-2021.adoc[Changelogs Juni 2021]
+*** xref:changelog:2021-06-30.adoc[Changelog 30. Juni 2021]
+*** xref:changelog:2021-06-23.adoc[Changelog 23. Juni 2021]
+*** xref:changelog:2021-06-17.adoc[Changelog 17. Juni 2021]
+** xref:changelog:april-2021.adoc[Changelogs April 2021]
+*** xref:changelog:2021-04-28.adoc[Changelog 28. April 2021]
+*** xref:changelog:2021-04-21.adoc[Changelog 21. April 2021]
+*** xref:changelog:2021-04-14.adoc[Changelog 14. April 2021]
+*** xref:changelog:2021-04-07.adoc[Changelog 07. April 2021]
+** xref:changelog:march-2021.adoc[Changelogs März 2021]
+*** xref:changelog:2021-03-31.adoc[Changelog 31. März 2021]
+*** xref:changelog:2021-03-24.adoc[Changelog 24. März 2021]
+*** xref:changelog:2021-03-17.adoc[Changelog 17. März 2021]
+*** xref:changelog:2021-03-10.adoc[Changelog 10. März 2021]
+*** xref:changelog:2021-03-03.adoc[Changelog 03. März 2021]
+** xref:changelog:februar-2021.adoc[Changelogs Februar 2021]
+*** xref:changelog:2021-02-24.adoc[Changelog 24. Februar 2021]
+*** xref:changelog:2021-02-17.adoc[Changelog 17. Februar 2021]
+*** xref:changelog:2021-02-10.adoc[Changelog 10. Februar 2021]
+*** xref:changelog:2021-02-03.adoc[Changelog 03. Februar 2021]
+** xref:changelog:januar-2021.adoc[Changelogs Januar 2021]
+*** xref:changelog:2021-01-27.adoc[Changelog 27. Januar 2021]
+*** xref:changelog:2021-01-20.adoc[Changelog 20. Januar 2021]
+*** xref:changelog:2021-01-13.adoc[Changelog 13. Januar 2021]
+*** xref:changelog:2021-01-06.adoc[Changelog 06. Januar 2021]
+* xref:changelog:archiv-2020.adoc[Archiv: 2020]
+** xref:changelog:dezember-2020.adoc[Changelogs Dezember 2020]
+*** xref:changelog:2020-12-30.adoc[Changelog 30. Dezember 2020]
+*** xref:changelog:2020-12-23.adoc[Changelog 23. Dezember 2020]
+*** xref:changelog:2020-12-16.adoc[Changelog 16. Dezember 2020]
+*** xref:changelog:2020-12-09.adoc[Changelog 09. Dezember 2020]
+*** xref:changelog:2020-12-02.adoc[Changelog 02. Dezember 2020]
+** xref:changelog:november-2020.adoc[Changelogs November 2020]
+*** xref:changelog:2020-11-25.adoc[Changelog 25. November 2020]
+*** xref:changelog:2020-11-18.adoc[Changelog 18. November 2020]
+*** xref:changelog:2020-11-11.adoc[Changelog 11. November 2020]
+*** xref:changelog:2020-11-04.adoc[Changelog 04. November 2020]
+** xref:changelog:oktober-2020.adoc[Changelogs Oktober 2020]
+*** xref:changelog:2020-10-28.adoc[Changelog 28. Oktober 2020]
+*** xref:changelog:2020-10-21.adoc[Changelog 21. Oktober 2020]
+*** xref:changelog:2020-10-14.adoc[Changelog 14. Oktober 2020]
+*** xref:changelog:2020-10-07.adoc[Changelog 07. Oktober 2020]
+** xref:changelog:september-2020.adoc[Changelogs September 2020]
+*** xref:changelog:2020-09-30.adoc[Changelog 30. September 2020]
+*** xref:changelog:2020-09-24.adoc[Changelog 24. September 2020]
+*** xref:changelog:2020-09-16.adoc[Changelog 16. September 2020]
+*** xref:changelog:2020-09-09.adoc[Changelog 09. September 2020]
+*** xref:changelog:2020-09-02.adoc[Changelog 02. September 2020]
+** xref:changelog:august-2020.adoc[Changelogs August 2020]
+*** xref:changelog:2020-08-26.adoc[Changelog 26. August 2020]
+*** xref:changelog:2020-08-19.adoc[Changelog 19. August 2020]
+*** xref:changelog:2020-08-12.adoc[Changelog 12. August 2020]
+*** xref:changelog:2020-08-05.adoc[Changelog 05. August 2020]
+** xref:changelog:juli-2020.adoc[Changelogs Juli 2020]
+*** xref:changelog:2020-07-29.adoc[Changelog 29. Juli 2020]
+*** xref:changelog:2020-07-22.adoc[Changelog 22. Juli 2020]
+*** xref:changelog:2020-07-15.adoc[Changelog 15. Juli 2020]
+*** xref:changelog:2020-07-08.adoc[Changelog 08. Juli 2020]
+** xref:changelog:juni-2020.adoc[Changelogs Juni 2020]
+*** xref:changelog:2020-06-17.adoc[Changelog 17. Juni 2020]
+*** xref:changelog:2020-06-24.adoc[Changelog 24. Juni 2020]
+*** xref:changelog:2020-06-30.adoc[Changelog 30. Juni 2020]
+*** xref:changelog:2020-06-10.adoc[Changelog 10. Juni 2020]
+*** xref:changelog:2020-06-03.adoc[Changelog 03. Juni 2020]
+** xref:changelog:mai-2020.adoc[Changelogs Mai 2020]
+*** xref:changelog:2020-05-27.adoc[Changelog 27. Mai 2020]
+*** xref:changelog:2020-05-20.adoc[Changelog 20. Mai 2020]
+*** xref:changelog:2020-05-13.adoc[Changelog 13. Mai 2020]
+*** xref:changelog:2020-05-06.adoc[Changelog 06. Mai 2020]
+** xref:changelog:april-2020.adoc[Changelogs April 2020]
+*** xref:changelog:2020-04-29.adoc[Changelog 29. April 2020]
+*** xref:changelog:2020-04-22.adoc[Changelog 22. April 2020]
+*** xref:changelog:2020-04-15.adoc[Changelog 15. April 2020]
+*** xref:changelog:2020-04-08.adoc[Changelog 08. April 2020]
+*** xref:changelog:2020-04-01.adoc[Changelog 01. April 2020]
+** xref:changelog:maerz-2020.adoc[Changelogs März 2020]
+*** xref:changelog:2020-03-25.adoc[Changelog 25. März 2020]
+*** xref:changelog:2020-03-18.adoc[Changelog 18. März 2020]
+*** xref:changelog:2020-03-11.adoc[Changelog 11. März 2020]
+*** xref:changelog:2020-03-04.adoc[Changelog 04. März 2020]
+** xref:changelog:februar-2020.adoc[Changelogs Februar 2020]
+*** xref:changelog:2020-02-26.adoc[Changelog 26. Februar 2020]
+*** xref:changelog:2020-02-19.adoc[Changelog 19. Februar 2020]
+*** xref:changelog:2020-02-12.adoc[Changelog 12. Februar 2020]
+*** xref:changelog:2020-02-05.adoc[Changelog 05. Februar 2020]
+** xref:changelog:januar-2020.adoc[Changelogs Januar 2020]
+*** xref:changelog:2020-01-29.adoc[Changelog 29. Januar 2020]
+*** xref:changelog:2020-01-22.adoc[Changelog 22. Januar 2020]
