fix: online store pages
Fix nav entries
Fix image IDs

--- a/docs/en-gb/modules/ROOT/nav.adoc
+++ b/docs/en-gb/modules/ROOT/nav.adoc
@@ -316,6 +316,7 @@
 *** xref:online-store:ceres-3-update.adoc[Updating themes to Ceres 3.0]
 *** xref:online-store:images-sizes.adoc[Image sizes in plentyShop LTS]
 *** xref:online-store:template-variables-in-ceres.adoc[ElasticSearch result fields]
+** xref:online-store:setting-up-online-store.adoc[Old: Setting up Callisto online store]
 * xref:markets:markets.adoc[Markets and price search engines]
 ** xref:markets:price-search-engines.adoc[Price search engines]
 *** xref:markets:basic-price-search-engine.adoc[Basic Price Search Engine]
