--- a/docs/en-gb/modules/online-store/pages/online-store.adoc
+++ b/docs/en-gb/modules/online-store/pages/online-store.adoc
@@ -1,407 +1,3 @@
-= Old: CMS & Callisto online store
+= Online store
+:page-layout: overview
 :author: team-webshop
-:keywords: Store settings, Callisto, online store
-:page-index: false
-:id: RWYBLML
-
-*Setup » Client » Select client » Online store*
-
-[IMPORTANT]
-.The new *plentyShop LTS* online store
-====
-As of now, online store projects are based on the new online store plugin  xref:online-store:setting-up-ceres.adoc#[plentyShop LTS]. The *plentyShop LTS* store uses the latest and future-proof xref:plugins:plugins.adoc#[plugin technology]. plentyShop LTS can be customised easily and extended by additional plugins from the link:https://marketplace.plentymarkets.com/en/[plentyMarketplace^].
-
-Online stores that have been created on the basis of the old CMS will be maintained during the transition period. However, no new features will be developed for the old CMS. We recommend to use the new *plentyShop LTS* online store for all future online store projects.
-
-====
-
-== Content of this chapter
-
-This chapter gives important information about the various menus of your online store. Along with the xref:omni-channel:online-store.adoc#[basic settings] of your online store, you learn how to carry out settings in the xref:omni-channel:multilingual-online-store.adoc#[Multilingualism] menu in order to set up a multilingual online store and how to manage currencies in the xref:payment:currencies.adoc#[Currency] menu. Furthermore, this chapter teaches you how to xref:omni-channel:online-store.adoc#lock-store[lock your online store] and how to set up mobile xref:omni-channel:online-store.adoc#forwarding[forwarding]. You will also learn how to save xref:omni-channel:online-store.adoc#legal-information[legal information], e.g. terms and conditions or cancellation rights.
-
-
-[WARNING]
-.Users will be logged out
-====
-Whenever you carry out changes in this menu and click on the save icon, other users will be logged out automatically and will need to log in again. This ensures that the changes will also apply to the other user profiles. Therefore, it is recommended that you announce changes in advance.
-====
-
-==  Basic settings for your online store
-
-The following table provides you with detailed information about the available options. You can use these options to individually set up the way that your online store looks as well as the functions that you want to use.
-
-[.instruction]
-Configuring the basic settings for your online store:
-
-.  Go to *Setup » Client » Select client » Online store » Settings*.
-.  Pay attention to the explanations given in <<table-settings-online-store>> and carry out the settings as desired.
-.  *Save* the settings.
-
-[[table-settings-online-store]]
-.*Settings* for the online store
-[cols="1,3"]
-|====
-| Settings | Explanation
-
-| *Upload Favicon*
-| If desired, upload an icon here which marks your store and is shown, for instance, in the address line of the browser to the left of the URL. +
-*Important*: Only icons with the data format .ico can be used. +
-For further information about favicons, refer to the web, e.g. link:https://en.wikipedia.org/wiki/Favicon[Wikipedia^].
-
-| *Document type declaration*
-| Select the appropriate HTML version for your online store. The setting will also go into effect for all available clients. The options *HTML 5*, *HTML 4.0 Transitional (default setting)*, *HTML 4.01 Transitional* and *XHTML 1.0 Transitional* are available. +
-There are so-called document type definitions for HTML. They define which elements can be included in an HTML document, which elements can appear inside of other elements, which attributes belong to an element, whether or not it is mandatory to specify these attributes etc. +
-*Important*: Note that different elements are available depending on which HTML version is used. This means that the codes you are using must correspond to the HTML version that you select here. Otherwise, non-compatible elements will not be displayed or will be interpreted differently. +
-The following website provides an overview of the elements found in various HTML versions and information on CSS formatting: +
-link:http://meiert.com/en/indices/html-elements/[http://meiert.com/en/indices/html-elements/^]
-
-| *Price column*
-| Select the price column of the price which you want to be displayed as standard price in your online store or client (store). The selected price will also be used for discounts. +
-Set up an individual price column as the standard price for each online store or client (store). +
-*Important*: This setting is only relevant to the order process. It does not have an influence on the item and category layouts in the online store.
-
-| *Cross-selling*
-| Select a setting for cross-selling offers in the online store.
-
-| *Dynamic cross-selling*
-| Select *Yes* for dynamic cross-selling. plentymarkets creates cross-selling links automatically. This means that if two items are bought together, then they will automatically be entered as xref:item:managing-items.adoc#950[cross-selling items] for each other.
-
-| *Validity of session cookie*
-| Choose between *until the browser is closed* and *one hundred days, even if the browser is closed*.
-
-| *Request security code in contact forms*
-| A security code is requested in contact forms for sending emails. +
-One example is the xref:crm:_tell-a-friend-e-mail.adoc#[tell-a-friend email]. +
-Select *No* if no security code is to be requested. *Yes* is set up by default.
-
-| *Google reCAPTCHA Website key*
-|Enter the Google reCAPTCHA Website key. You receive this key when link:https://www.google.com/recaptcha/admin#list[registering your website for Google reCAPTCHA^]. If *Yes* is selected under *Request security code in contact forms*, the Google reCAPTCHA will be displayed in the contact form. Furthermore, Google reCAPTCHA is also available for the xref:omni-channel:customer-feedback.adoc[customer feedback form]. Please note that implementing the reCAPTCHA necessitates that you refer to its use in your privacy policy.
-
-| *Google reCAPTCHA Secret key*
-|Den Secret key von Google reCAPTCHA eingeben. Den Secret key erhalten Sie, wenn Sie ihre link:https://www.google.com/recaptcha/admin#list[Website bei Google reCAPTCHA registrieren^].
-
-| *Number of invalid login attempts per day*
-| Enter how many login attempts for the store you want to allow customers per day. A login attempt is made when incorrect access data is entered. Correct logins are not counted in this number. You can select between 4 and 25 attempts. +
-*Caution*: The higher the number, the more times a user - as well as an unauthorized person! - can attempt to log into the website by trying out different combinations of access data. Therefore, you should take extra care when setting this option. The next day, the customer will again have the same number of login attempts available.
-
-| *Login*
-| Decide whether it should only be possible to log into the particular online store, i.e. client (store), or into all online stores.
-
-| *Precautionary statement in case of overselling*
-| If you select the setting *active*, then a precautionary statement will be displayed in the order process if overselling occurs, i.e. if the order quantity exceeds the net stock of the corresponding item. The purchaser will be informed that the delivery may be delayed. Condition for the note: the item's stock must be positive and the setting No limitation must be selected (item's tab: Stock subtab: *Settings*).
-|====
-
-
-The *Lock store now* setting allows you to set your client (store) invisible during initial set-up. Visitors will see a service note when they try to access a locked online store. You can also lock the store in order to carry out substantial changes to your store at a later point and redirect your visitors to a page with a service note in the meantime. Don't forget to unlock your store after you have finished making changes. Otherwise, you will not be able to receive orders.
-
-[TIP]
-.Tip
-====
-If you need to make substantial changes, create a copy of your design and edit the copy. This allows you to return to the original design at any time if needed. Open the online store using the standard URL in another browser after each maintenance. Use this chance to check whether all your changes have been carried out correctly.
-====
-
-[#lock-store]
-== Locking an online store
-
-Proceed as described below to lock the online store.
-
-[.instruction]
-Locking an online store:
-
-. Go to *Setup » Client » Select client » Online store » Lock store*.
-. Click on *Lock store now*. +
-→ The online store is locked and can be accessed via direct product links or the URL suffix */index.php* only. +
-_*Tip:*_ When you lock the default client (store), all other clients of the store also will be locked.
-
-[IMPORTANT]
-.Locked online stores cannot be accessed via REST API
-====
-When you lock an online store, you can no longer communicate with the plentymarkets system via REST API.
-====
-
-== Unlocking an online store
-
-Proceed as described below to unlock the online store.
-
-[.instruction]
-Unlocking an online store:
-
-. Go to *Setup » Client » Select client » Online store » Lock store*.
-. Click on *Unlock store now*. +
-→ The online store is unlocked and can be accessed by customers.
-
-[#forwarding]
-== Setting up forwarding for mobile devices
-
-If you wish to offer a mobile version of your website, you need to enter two target URLs in the menu *Setup » Client » Select client » Online store » Forwarding*. The option *Target URL (category)* controls access to the categories. The option *Target URL (item page)* sets up forwarding to a specific item. The forwarding is initiated by a HTTP request when the online store is accessed with a mobile device. Proceed as described below to set up forwarding for mobile devices.
-
-[.instruction]
-Setting up forwarding for mobile devices:
-
-. Go to *Setup » Client » Select client » Online store » Forwarding*.
-. Pay attention to the explanations given in <<table-forwarding-mobile>> and carry out the settings as desired.
-. *Save* the settings.
-
-[[table-forwarding-mobile]]
-.forwarding options for mobile devices
-[cols="1,3"]
-|====
-|Settings |Explanation
-
-| *Forwarding*
-|This function makes it possible to display your online store on mobile devices, e.g. with xref:omni-channel:shopgate.adoc#[Shopgate] or a similar provider. Select *Active* to begin forwarding to the specified URLs.
-
-| *Target URL (category)*
-|Enter the URL for the mobile version of your online store, e.g. *http://mobile.yourplentystore.co.uk*. All customers that access your online store from a mobile device will be forwarded to this URL. +
-*Tip:* In the URL, the template variable *$ReferrerID* defines where customers were forwarded from. The URL would then look like this: *http://mobile.yourplentystore.co.uk/?referrerId=$referrerId*
-
-| *Target URL (item page)*
-|Enter the URL that customers should be forwarded to e.g. when they use a mobile device to access an item in your online store from a price comparison portal. The item URL would then look like this: *http://mobile.yourplentystore.co.uk/?itemNumber=$itemId*. The template variable *$ItemID* in the URL provides access to every item. +
-*Tip:* In the URL, the template variable *$ReferrerID* defines where customers were forwarded from. The URL would then look like this: *http://mobile.yourplentystore.co.uk/?itemNumber=$itemId&amp;referrerId=$referrerId* +
-*Important:*: If you do not enter a URL here, then customers will not be forwarded to the items in your online store from price comparison portals etc.
-|====
-
-== Determining what should happen in case of a 404 error
-
-In the past, invalid URLs were not deleted from the sitemap immediately. This caused a 404 error when changes had been made to a category or item page. The page was no longer found. The sitemap function generates content for each client daily and deletes invalid entries. Only current and visible content will be included in the sitemaps. With the settings for 404 errors you determine which kind of search will be carried out as a result of such an error. The HTTP status message 301 (Moved permanently) will be sent simultaneously. Consequently, the outdated URL will be deleted from the search engines.
-
-[TIP]
-.When is an automatic search useful?
-====
-An automatic search is useful if the new URL contains the same or similar terms and is likely to be found easily. If this is not the case, then an automatic search can cause a soft 404 error to occur. You can use this forwarding if you usually offer similar content. We recommend that you discuss this matter with your SEO agency.
-====
-
-[.instruction]
-Setting up forwarding for 404 errors:
-
-. Go to *Setup » Client » Select client » Online store » Forwarding*.
-. Pay attention to the explanations given in <<table-forwarding-404>> and carry out the settings as desired.
-. *Save* the settings.
-
-[[table-forwarding-404]]
-.forwarding options for 404 errors (page not found)
-[cols="1,3"]
-|====
-|Settings |Explanation
-
-| *Redirect for categories*
-| *Inactive* (default) = No forwarding +
-*Carry out content search* = If the category URL is no longer valid, a corresponding category page will be searched for. +
-*Carry out item search* = If the category URL is no longer valid, a corresponding item will be searched for. +
-*Important*: If you activated this function, the *404 page* that you determined in the *Setup » Client » Select client » Online store » Pages* menu will not be displayed.
-
-| *Redirect for item pages*
-| *Inactive* (default) = No forwarding +
-*Carry out content search* = If the item URL is no longer valid, a corresponding category page will be searched for. +
-*Carry out item search* = If the item URL is no longer valid, a corresponding item will be searched for. +
-*Important*: If you activated this function, the *"Item not found" page* that you determined in the *Setup » Client » Select client » Online store » Pages* menu will not be displayed.
-|====
-
-
-[#legal-information]
-== Legal information
-
-In this menu, you can save your *terms and conditions*, *cancellation rights*, *privacy policy* and *legal disclosure* for a *client* (store). Use *template variables* to display the content in the store and in the email templates. Furthermore, if you use an external service provider to automatically update the legal texts whenever laws change, then the current texts are found here. The advantage is that if you ever have to make changes, then you only need to edit the particular texts in this one menu. The changes then go into effect for all of the documents that are linked.
-
-== Entering text
-
-Save a copy of your terms and conditions, privacy policy and legal disclosure in every available *__language__*. You can save the documents as pure *text* or in *HTML* format.
-
-[NOTE]
-.Entering text
-====
-Open a language and enter the legal texts in this language.
-====
-
-[[image-terms-conditions-html-tab]]
-.English terms and conditions in the *HTML* tab
-image::omni-channel:EN-Settings-Client-Store-Legal-Information-01.png[]
-
-== Inserting template variables and template functions
-
-As described above, *template variables* and *template functions* are used to insert the legal information. Use template variables to insert content, i.e. texts, into category pages or email templates. Use template functions to insert the category pages into the design. Create xref:item:managing-categories.adoc#[categories of the type content] for legal information.
-
-=== Template variables for category pages
-
-The template variables for category pages contain the text that was entered into the *HTML* tab. When a category page is accessed in the online store, the template variable will display the text that was saved for the particular language and store. As described in section 2, you must have entered text for the language and the store.
-
-<<image-inserting-template-variables-terms-conditions-category-page>> shows the template variable for the terms and conditions in the store's terms and conditions category page.
-
-[[image-inserting-template-variables-terms-conditions-category-page]]
-.inserting the *template variables* for the *terms and conditions* into the *category page*
-image::omni-channel:EN-Settings-Client-Store-Legal-Information-02.png[]
-
-The following table explains the *template variables* for category pages:
-
-.*template variables* for category pages
-[cols="1,3"]
-|====
-|Template variable |Explanation
-
-| *$GeneralTermsAndConditions*
-|Terms and Conditions
-
-| *$CancellationRights*
-|Cancellation rights
-
-| *$PrivacyPolicy*
-|Privacy policy
-
-| *$LegalDisclosure*
-|Legal disclosure (required by law in some countries)
-|====
-
-
-=== Template functions for linking category pages
-
-The following is an overview of the template functions that need to be inserted into the design in order to link to category pages. +
-Go to xref:omni-channel:online-store.adoc#content-pages[Setup » Client » Select client » Online store » Pages] and link the category pages so that the template functions display content. This can also be done design specifically in the xref:omni-channel:cms.adoc#web-design-editing-the-web-design[CMS » Web design » Settings » Design settings » Tab: Clients] menu. +
-The advantage of these template functions is that they do not need to be edited when copying the design for a different client. If you use the template function *Link()*, then you will have to change the ID for every client.
-
-The following table explains the *template functions* for *__linking__* category pages:
-
-.*template functions* for *linking* category pages
-[cols="1,3"]
-|====
-|Template function |Explanation
-
-| *Link_TermsConditions*
-|Terms and Conditions
-
-| *Link_CancellationRights*
-|Cancellation rights
-
-| *Link_PrivacyPolicy*
-|Privacy policy
-
-| *Link_Help*
-|Help page
-
-| *Link_ShippingCosts*
-|Shipping costs
-|====
-
-
-=== Template variables for email templates
-
-The process of integrating texts into *email templates* is similar. However, email templates require you to distinguish whether the email should be sent as pure *text* or as an *HTML* email. Consequently, two template variables are available for all legal information email templates.
-
-The following table explains the *template variables* for *email templates*:
-
-.*template variables* for email templates
-[cols="1,3"]
-|====
-|Template variables |Explanation
-
-| *$GeneralTermsAndConditionsText*
-|Terms and conditions, text
-
-| *$GeneralTermsAndConditionsHTML*
-|Terms and conditions, HTML
-
-| *$CancellationRightsText*
-|Cancellation rights, text
-
-| *$CancellationRightsHTML*
-|Cancellation rights, HTML
-
-| *$PrivacyPolicyText*
-|Privacy policy, text
-
-| *$PrivacyPolicyHTML*
-|Privacy policy, HTML
-
-| *$LegalDisclosureText*
-|Legal disclosure, text
-
-| *$LegalDisclosureHTML*
-|Legal disclosure, HTML
-|====
-
-
-[IMPORTANT]
-.Publishing the design
-====
-Go to xref:omni-channel:cms.adoc#web-design-user-interface[CMS » Web design] and *__publish the design__* after you have inserted template variables or template functions.
-====
-
-[#content-pages]
-== General information about the Pages menu
-
-Link *category pages* in this menu. The pages listed here are included in nearly every *online store*. Some of the pages linked in this menu contain xref:omni-channel:online-store.adoc#legal-information[legal information]. +
-By linking pages, you can use specific *template functions* in the design, e.g. Link_CancelationRights. These links are advantageous if you also use the same design in a different plentymarkets store. In this case, the same links would work in both stores.
-
-[IMPORTANT]
-.Links in the store design
-====
-Standard plentymarkets designs such as *stonepattern_green* contain links to many of the pages that are selected here. The links are often in *PageDesignContentMainFrame* by default.
-====
-
-== Configuration
-
-Link the pages for every *client*. This menu only includes xref:item:managing-categories.adoc#[categories of the type content].
-
-[IMPORTANT]
-.Category links that were saved in the design take priority over links that are saved here.
-====
-The links carried out in the *Setup » Client » Select client » Online store » Pages* menu do not apply to designs for which category links were carried out in the *CMS » Web design » Settings » Design settings » Tab: Clients* menu. Design specific category links take priority.
-====
-
-.selecting category pages for areas of your online store
-image::omni-channel:EN-Settings-Client-Store-Pages-01.png[]
-
-[.instruction]
-Selecting category pages for areas of your online store:
-
-. Go to *Setup » Client » Select client » Online store » Pages*.
-. Pay attention to the explanations given in <<table-assigning-category-pages>> and carry out the settings as desired.
-. *Save* the settings.
-
-The following table explains the *pages* that can be linked:
-
-[[table-assigning-category-pages]]
-.*assigning* the category pages
-[cols="1,3"]
-|====
-|Settings |Explanation
-
-|Homepage
-|Select a xref:item:managing-categories.adoc#[category page] for the homepage. It will be displayed when the online store is accessed.
-
-| *Terms and conditions page*
-|Select a xref:item:managing-categories.adoc#[category page] for the terms and conditions.
-
-| *Privacy policy page*
-|Select a xref:item:managing-categories.adoc#[category page] for the privacy policy.
-
-| *Cancellation rights page*
-|Select a xref:item:managing-categories.adoc#[category page] for the cancellation rights.
-
-| *Help page*
-|Select a xref:item:managing-categories.adoc#[category page] for the help information in the online store.
-
-| *Page 404*
-|Select a xref:item:managing-categories.adoc#[category page] that should be displayed instead of the *__standard 404 page__*. +
-The standard 404 page contains a note that lets visitors know *__the page is not available or was moved__*.
-
-| *Shipping costs page*
-|Select a xref:item:managing-categories.adoc#[category page] for information about the shipping costs.
-
-| *"Item not found" page*
-|Select a xref:item:managing-categories.adoc#[category page] that should be displayed instead of the standard message when an *__item was not found__*.
-
-| *Payment methods page*
-|Select a xref:item:managing-categories.adoc#[category page] for information about payments and payment methods.
-
-| *Contact page*
-|Select a xref:item:managing-categories.adoc#[category page] that displays the company's contact information. +
-It also makes sense to use this page as the *404 page* so that store visitors can contact you directly if an error occurs.
-
-| *Legal disclosure page*
-|Select a xref:item:managing-categories.adoc#[category page] for the legal disclosure. +
-You are required to have a legal disclosure in many countries. It should be given a logical name and customers should be able to find this page easily. You can find further information about the *__German laws__* that require you to have a *__legal disclosure__* link:http://www.bmjv.de/SharedDocs/Downloads/DE/pdfs/LeitfadenZurAnbieterkennzeichnung.pdf[here^] (information provided in German).
-
-| *Bank details page*
-|Select a xref:item:managing-categories.adoc#[category page] for bank details. +
-The information on this page is required for the payment methods *cash in advance* and *invoice*. This page should include your account name and number as well as information about the transaction's *designated use*.
-|====
