CHANGE smaller issues on the prohandel page, in preparation for content changes

--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -6,7 +6,7 @@
 :author: gretchen-bates
 
 ////
-zuletzt bearbeitet 03.02.2022
+zuletzt bearbeitet 04.04.2022
 ////
 
 //ToDo - change position to 60 once it should appear in the navigation
@@ -50,7 +50,7 @@ Das heißt, falls du dein plentymarkets System noch nicht eingerichtet hast, sol
 [#20]
 == Plugin herunterladen und installieren
 
-Das link:https://marketplace.plentymarkets.com/prohandel_54913[Prohandel-Plugin] steht kostenpflichtig auf plentyMarketplace zur Verfügung.
+Das link:https://marketplace.plentymarkets.com/prohandel_54913[Prohandel-Plugin] steht auf plentyMarketplace zur Verfügung.
 Es stellt die Verbindung zwischen deinem Prohandel-System und plentymarkets her.
 
 Das Prohandel-Plugin kann:
@@ -89,8 +89,7 @@ Standardmäßig ist die neuste Version vorausgewählt.
 → Das Plugin wird installiert. +
 → Nachdem das Installieren abgeschlossen ist, wird das Plugin-Set angezeigt.
 . Ändere den Zustand des Plugins zu aktiv (icon:toggle-on[role="blue"]).
-. Speichere (icon:save[role="darkGrey"]) das Plugin-Set. +
-→ Wenn es beim Speichern ein Problem gibt, klicke auf *Details öffnen*, um weitere Informationen zu erhalten.
+. Stelle das Plugin-Set bereit (icon:cloud-upload[role="darkGrey"]).
 
 Ist das Thema Plugins neu für dich?
 Im xref:plugins:plugins.adoc#[Plugins-Kapitel] des Handbuchs erfährst du mehr über Plugins und wie sie in plentymarkets funktionieren.
@@ -252,9 +251,8 @@ In diesem Schritt legst du fest, welche Artikeldaten von Prohandel an plentymark
 . Wähle eine Grundlage aus der Dropdown-Liste aus.
 . Gib ein Datum in das Feld ein.
 
-[cols="1,4a"]
+[cols="1,3a"]
 !===
-!Grundlage !Erläuterung
 
 ! *Erstes Wareneingangsdatum*
 !Dies ist ein Zeitstempel für Artikel in Prohandel.
@@ -262,7 +260,7 @@ Der Zeitstempel wird erzeugt, wenn der Artikel erstmalig in Prohandel angelegt w
 Dieser Zeitstempel ändert sich nie.
 
 *_Hinweis_*:
-Dieser Zeitstempel ist nicht zu verwechseln mit dem _zweiten_ Wareneingangsdatum, welcher sich aktualisiert, sobald neuer Wareneingang auf den Artikel gebucht wird.
+Dieser Zeitstempel ist nicht zu verwechseln mit dem zweiten Wareneingangsdatum, welcher sich aktualisiert, sobald neuer Wareneingang auf den Artikel gebucht wird.
 
 ! *Zweites Verkaufsdatum*
 !Dies ist ein Zeitstempel für Artikel in Prohandel.
@@ -320,17 +318,16 @@ Wähle den Feldnamen und Feldwert.
 . Entscheide, was mit diesen Artikeln passieren soll.
 Wähle dazu das Importverhalten.
 
-[cols="1,4a"]
+[cols="1,3a"]
 !===
-!Verhalten !Erläuterung
 
 ! *Nur Artikel mit angegebenem Wert importieren*
-!Es werden _nur_ die Artikel importiert, die den angegebenen Feldwert und Feldnamen enthalten.
+!Es werden nur die Artikel importiert, die den angegebenen Feldwert und Feldnamen enthalten.
 Alle anderen Artikel werden ignoriert.
 
 ! *Alle Artikel mit angegebenem Wert überspringen*
 !Die Artikel, die den angegebenen Feldwert und Feldnamen enthalten, werden übersprungen.
-Das heißt, sie werden _nicht importiert_.
+Das heißt, sie werden nicht importiert.
 
 !===
 
@@ -405,9 +402,8 @@ Diese Dropdown-Liste enthält nur die Attribute, die bereits in plentymarkets vo
 |Welches plentymarkets Datenfeld passt zu deiner eigenen Artikel-Nummer in Prohandel?
 Wähle die passende Option aus der Dropdown-Liste aus.
 
-[cols="1,4a"]
+[cols="1,3a"]
 !===
-!Option !Erläuterung
 
 ! *Keine*
 !Die eigene Artikel-Nummer wird nicht übertragen.
@@ -428,9 +424,8 @@ Diese Dropdown-Liste enthält nur die Eigenschaften, die bereits in plentymarket
 |Welches plentymarkets Datenfeld passt zu deiner Prohandel-Lieferanten-Artikelnummer?
 Wähle die passende Option aus der Dropdown-Liste aus.
 
-[cols="1,4a"]
+[cols="1,3a"]
 !===
-!Option !Erläuterung
 
 ! *Keine*
 !Die Lieferanten-Artikelnummer wird nicht übertragen.
@@ -457,9 +452,8 @@ Diese Dropdown-Liste enthält nur die Eigenschaften, die bereits in plentymarket
 |Welche plentymarkets Eigenschaft passt zu dem Prohandel-Datenfeld?
 Wähle die passende Option aus der Dropdown-Liste aus.
 
-[cols="1,4a"]
+[cols="1,3a"]
 !===
-!Option !Erläuterung
 
 ! *Keine*
 !Das Prohandel-Datenfeld wird nicht übertragen.
@@ -579,7 +573,7 @@ In diesem Schritt aktivierst du die Cron-Jobs, die automatisch ausgeführt werde
 | *Artikelimport*
 |Täglich
 |
-* Nachdem du den Assistenten abgeschlossen hast, werden _alle_ Artikel erstmalig von Prohandel nach plentymarkets übertragen.
+* Nachdem du den Assistenten abgeschlossen hast, werden alle Artikel erstmalig von Prohandel nach plentymarkets übertragen.
 Dieser erstmalige vollständige Import kann, je nach Anzahl der Produkte, einige Tage in Anspruch nehmen.
 * Danach werden nur noch Teilimporte durchgeführt, die auf den zuvor gewählten xref:business-entscheidungen:prohandel.adoc#70[Importeinstellungen] basieren.
 * Es werden nur neue Artikel importiert und neue Varianten zu bestehenden Artikeln.
@@ -634,10 +628,10 @@ Zum Beispiel:
 ====
 Prüfe die übertragenen Daten sowohl für die Hauptvariante als auch für die Untervarianten:
 
-* Die erste Variante eines Artikels wird als _Hauptvariante_ bezeichnet.
+* *_Hauptvariante_*: Die erste Variante eines Artikels wird als Hauptvariante bezeichnet.
 Sie steht nicht zum Verkauf, sondern ist rein virtuell und dient dazu, die weiteren Untervarianten des Artikels anhand von xref:artikel:vererbung.adoc#[Vererbung] zu verwalten.
 Wenn du einen Artikeldatensatz öffnest, öffnet sich automatisch auch die Hauptvariante.
-* Die _Untervarianten_ sind die verkaufbaren Ausführungen des Produkts.
+* *_Untervariante_*: Die Untervarianten sind die verkaufbaren Ausführungen des Produkts.
 Wird zum Beispiel ein T-Shirt in den Farben Blau und Rot und den Größen S, M, L angeboten, dann ist jede einzelne Kombination (Blau S, Blau M, Blau L, Rot S, Rot M, Rot L) eine Untervariante.
 Um eine Untervariante zu öffnen, klicke auf den Tab *Varianten* und dann auf *Suchen* (icon:search[role="blue"]).
 Klicke anschließend in der Übersicht auf eine Untervariante.
@@ -658,19 +652,19 @@ Eine vollständige Liste aller Artikeldatenfelder in plentymarkets findest du au
 [#150]
 == Aufträge und Ereignisaktionen
 
+[#155]
+=== Aufträge abwickeln
+
 Wenn ein Produkt verkauft wird, landen die Auftragsdaten zunächst im plentymarkets Menü *Aufträge » Aufträge bearbeiten*.
 Hier kann der Auftrag abgewickelt werden und sein Fortschritt mit Hilfe eines Status verfolgt werden.
 
 Weitere Informationen zur Auftragsbearbeitung in plentymarkets findest du auf der Handbuchseite xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten].
 
-//nicht vergessen - auf die Ereignis-Aktion Seite selbst, musst du die 4 Prohandel EAs in die Tabelle eränzen. Also hier:
-//https://knowledge.plentymarkets.com/automatisierung/ereignisaktionen#130
-
 [#160]
 === Ereignisaktionen einrichten
 
 Natürlich sollen die Auftragsdaten nicht nur in plentymarkets bleiben, sondern auch nach Prohandel übertragen werden.
-Dazu musst du _vier sogenannte Ereignisaktionen_ einrichten.
+Dazu musst du vier sogenannte Ereignisaktionen einrichten.
 Diese müssen nur einmalig im Voraus eingerichtet werden, damit der Auftragsexport korrekt funktioniert.
 
 [.instruction]
@@ -681,14 +675,14 @@ Ereignisaktion einrichten:
 → Das Fenster *Neue Ereignisaktion erstellen* wird geöffnet.
 . Gib einen eindeutigen Namen für die Ereignisaktion ein.
 . Wähle das Ereignis gemäß den folgenden Tabellen.
-. Klicke auf icon:save[role="green"] *Speichern*. +
+. Klicke auf icon:save[set=plenty, role="green"] *Speichern*. +
 → Die Ereignisaktion wird angelegt und kann weiter bearbeitet werden.
 . Klicke auf *Aktion hinzufügen* (icon:plus[role="green"]) und wähle die Aktion gemäß den folgenden Tabellen.
 . Optional: Klicke auf *Filter hinzufügen* (icon:plus[role="green"]) und wähle Filter, wenn die Ereignisaktion nur in bestimmten Szenarien gelten soll.
 Beispielsweise wenn die Ereignisaktion nur für bestimmte Verkaufskanäle oder Mandanten gelten soll.
 . Aktiviere die Ereignisaktion (icon:check-square[role="blue"]), sobald sie in Kraft treten soll.
 Ab dem Zeitpunkt der Aktivierung greift die Ereignisaktion mit den von dir gewählten Einstellungen.
-. Speichere (icon:save[role="green"]) die Einstellungen.
+. Speichere (icon:save[set=plenty, role="green"]) die Einstellungen.
 
 Weitere Informationen zur allgemeinen Verwendung von Ereignisaktionen findest du auf der Handbuchseite xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen].
 
@@ -741,7 +735,7 @@ Auftrag > Mandant (Shop)
 Eine Stornierung:
 
 * bedeutet, dass der:die Kund:in es sich anders überlegt hat und den gekauften Artikel doch nicht haben möchte.
-* erfolgt, _bevor_ du die Zahlung erhalten und die Ware verschickt hast.
+* erfolgt, bevor du die Zahlung erhalten und die Ware verschickt hast.
 
 Um einen Auftrag zu stornieren, änderst du seinen Status auf 8.
 Zu diesem Zeitpunkt soll Prohandel auch über die Stornierung informiert werden, damit der Bestand nicht länger reserviert wird.
@@ -767,7 +761,7 @@ Auftrag > Mandant (Shop)
 Eine Retoure:
 
 * bedeutet, dass der:die Kund:in es sich anders überlegt hat und den gekauften Artikel doch nicht haben möchte.
-* erfolgt, _nachdem_ du die Zahlung erhalten und die Ware verschickt hast.
+* erfolgt, nachdem du die Zahlung erhalten und die Ware verschickt hast.
 
 Da die Zahlung bereits eingegangen ist, muss in diesem Fall eine Rückzahlung erfolgen.
 Das bedeutet, dass du Prohandel über die Retoure informieren musst, damit die Umsätze wieder aus der Umsatzfiliale ausgebucht werden können.
