--- a/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
+++ b/docs/de-de/modules/automatisierung/pages/ereignisaktionen.adoc
@@ -1004,6 +1004,22 @@ Welche Aktionen dir in dieser Aktionsgruppe zur Verfügung stehen, hängt haupts
 | *Retoure an Zalando senden*
 |Die Aktion sendet eine Retoure an xref:maerkte:zalando.adoc#1600[Zalando].
 
+| *Prohandel: Bestand reservieren*
+|Bezieht sich auf das Prohandel-Plugin, das die Verbindung zwischen deinem Prohandel-System und plentymarkets herstellt.
+Weitere Informationen zur Aktion sind auf der xref:business-entscheidungen:prohandel.adoc#[Prohandel-Handbuchseite] zu finden.
+
+| *Prohandel: Versand und Zahlung an Prohandel melden*
+|Bezieht sich auf das Prohandel-Plugin, das die Verbindung zwischen deinem Prohandel-System und plentymarkets herstellt.
+Weitere Informationen zur Aktion sind auf der xref:business-entscheidungen:prohandel.adoc#[Prohandel-Handbuchseite] zu finden.
+
+| *Prohandel: Auftragsstornierung an Prohandel melden*
+|Bezieht sich auf das Prohandel-Plugin, das die Verbindung zwischen deinem Prohandel-System und plentymarkets herstellt.
+Weitere Informationen zur Aktion sind auf der xref:business-entscheidungen:prohandel.adoc#[Prohandel-Handbuchseite] zu finden.
+
+| *Prohandel: Retoure an Prohandel melden*
+|Bezieht sich auf das Prohandel-Plugin, das die Verbindung zwischen deinem Prohandel-System und plentymarkets herstellt.
+Weitere Informationen zur Aktion sind auf der xref:business-entscheidungen:prohandel.adoc#[Prohandel-Handbuchseite] zu finden.
+
 | *Amazon FBA - Umbuchung aus Nachbestellung erstellen*
 |Die Aktion erstellt aus einer Nachbestellung eine xref:maerkte:amazon-fba-nutzen.adoc#140[Umbuchung für die Amazon-FBA-Sendung]. +
 *_Hinweis:_* Diese Aktion kann nur verwendet werden, wenn die Nachbestellung abgeschlossen wurde und der Auftrag vom Typ *Nachbestellung* ist.
