--- a/docs/en-gb/modules/automation/pages/event-procedures.adoc
+++ b/docs/en-gb/modules/automation/pages/event-procedures.adoc
@@ -1005,6 +1005,22 @@ Which procedures are available to you in the procedure group depends on the plug
 |*Retoure an Zalando senden*
 |The procedure sends a return to xref:markets:zalando.adoc#1600[Zalando].
 
+| *Prohandel: Reserve stock*
+|Refers to the Prohandel plugin, which connects your Prohandel system with plentymarkets.
+Further information about the procedure can be found on the xref:business-decisions:prohandel.adoc#[Prohandel page of the manual].
+
+| *Prohandel: Send shipping and payment notification to Prohandel*
+|Refers to the Prohandel plugin, which connects your Prohandel system with plentymarkets.
+Further information about the procedure can be found on the xref:business-decisions:prohandel.adoc#[Prohandel page of the manual].
+
+| *Prohandel: Send order cancellation to Prohandel*
+|Refers to the Prohandel plugin, which connects your Prohandel system with plentymarkets.
+Further information about the procedure can be found on the xref:business-decisions:prohandel.adoc#[Prohandel page of the manual].
+
+| *Prohandel: Send return notification to Prohandel*
+|Refers to the Prohandel plugin, which connects your Prohandel system with plentymarkets.
+Further information about the procedure can be found on the xref:business-decisions:prohandel.adoc#[Prohandel page of the manual].
+
 | *Amazon FBA - Create redistribution from reorder*
 |The procedure creates a xref:markets:amazon-fba.adoc#140[redistribution of the Amazon FBA shipment] from a reorder. +
 *_Note:_* This event procedure can only be used if the reorder is finished and the order is of the type *Reorder*.
