--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -444,7 +444,7 @@ Für die Grundpreisberechnung empfehlen wir die folgenden Zuordnungen:
 [cols="2,3a"]
 !===
 ! *OTTO Market-Datenfeld*
-! *Zuordnung in plentymarkets*/*Erläuterung*
+! *Zuordnung in plentymarkets*/ *Erläuterung*
 
 ! Verkaufspreismenge
 ! * *Variante » Inhalt Menge*
@@ -458,16 +458,21 @@ Die Grundpreismenge ist die Grundlage zum Berechnen des Grundpreises. OTTO erlau
 *_Tipp:_* Wenn alle Varianten des Katalogs eine Grundpreismenge von *1* haben, kannst du das Feld *Grundpreismenge* unzugeordnet lassen. Wir übergeben dann den Standardwert *1*.
 
 ! Grundpreiseinheit
-! * *Variante » Inhalt Einheit » [ISO-Code der Einheit eingeben]* +
-image::maerkte:otto-unitprice-mappings.png[] +
+! * *Variante » Inhalt Einheit » [ISO-Code der Einheit eingeben]*
+
+image::maerkte:otto-unitprice-mappings.png[]
+
 *_Tipp:_* Die ISO-Codes findest du im Menü *Einrichtung » Artikel » Einheiten* in der Spalte *ISO*. +
-*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet. +
+*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet.
+
 image::maerkte:otto-unitprice-iso.png[]
 
 _oder_
 
-* Eigenschaft mit den von OTTO Market erlaubten Werten (ISO-Codes) +
-image::maerkte:otto-unitprice-mappings-salesprice.png[] +
+* Eigenschaft mit den von OTTO Market erlaubten Werten (ISO-Codes)
+
+image::maerkte:otto-unitprice-mappings-salesprice.png[]
+
 Die ISO-Codes findest du im Menü *Einrichtung » Artikel » Einheiten* in der Spalte *ISO*. +
 *_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet. +
 image::maerkte:otto-unitprice-iso.png[]
