--- a/docs/de-de/modules/maerkte/pages/otto-market.adoc
+++ b/docs/de-de/modules/maerkte/pages/otto-market.adoc
@@ -474,7 +474,8 @@ _oder_
 image::maerkte:otto-unitprice-mappings-salesprice.png[]
 
 Die ISO-Codes findest du im Menü *Einrichtung » Artikel » Einheiten* in der Spalte *ISO*. +
-*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet. +
+*_Beispiel:_* Für die Angabe *Stück* wird der Wert "C62" erwartet.
+
 image::maerkte:otto-unitprice-iso.png[]
 
 Die Grundpreiseinheit bezieht sich auf den Inhalt der Einheit der Maßangaben der Variante. OTTO Market erwartet den ISO-Code der Einheit.
