fix: page layout on overview pages

--- a/docs/de-de/modules/daten/pages/datenformate.adoc
+++ b/docs/de-de/modules/daten/pages/datenformate.adoc
@@ -1,6 +1,6 @@
 = Datenformate
+:author: team-plenty-channel
 :keywords: Datenformate, dynamischer Export
 :description: Erfahre, welche Datenformate dir für den dynamischen Export in plentymarkets zur Verfügung stehen.
 :page-index: false
-:id: XDEKNSD
-:author: team-plenty-channel
+:page-layout: overview
