--- a/docs/de-de/modules/daten/pages/format-typen.adoc
+++ b/docs/de-de/modules/daten/pages/format-typen.adoc
@@ -2,3 +2,4 @@
 :keywords: FormatDesigner, Format-Typen, Export, Data, Daten-Export
 :description: Hier findest du eine Auflistung aller möglichen Format-Typen für FormatDesigner.
 :author: team-plenty-channel
+:page-layout: overview
