--- a/docs/de-de/modules/maerkte/pages/amazon-prime.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-prime.adoc
@@ -1,5 +1,5 @@
 = Amazon Prime mit MFN
+:author: team-plenty-channel
 :keywords:
 :description: Multi-Channel in plentymarkets: Amazon Prime mit plentymarkets.
-:id: EDTFYSX
-:author: team-plenty-channel
+:page-layout: overview
