--- a/docs/en-gb/modules/data/pages/format-types.adoc
+++ b/docs/en-gb/modules/data/pages/format-types.adoc
@@ -1,4 +1,5 @@
 = Format types
+:author: team-plenty-channel
 :keywords: FormatDesigner, Format Designer, Format types, Export, Data, data export
 :description: Here you'll find a list of all the different format types that you can use for FormatDesigner.
-:author: team-plenty-channel
+:page-layout: overview
