--- a/docs/en-gb/modules/markets/pages/amazon-prime.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-prime.adoc
@@ -1,5 +1,5 @@
 = Amazon Prime with MFN
+:author: team-plenty-channel
 :keywords:
 :description: Multi-Channel in plentymarkets: Amazon Prime with plentymarkets.
-:id: EDTFYSX
-:author: team-plenty-channel
+:page-layout: overview
