Added translation for Hood, corrected filters for MyToys

--- a/docs/de-de/modules/maerkte/pages/mytoys.adoc
+++ b/docs/de-de/modules/maerkte/pages/mytoys.adoc
@@ -860,7 +860,7 @@ Log-Level Debug aktivieren:
 . Aktiviere im Dropdown-Menü *Log level* die Option *Debug*.
 . *Speichere* (icon:save[set=plenty]) die Einstellungen.
 
-Nach dem nächsten Export kannst du im Menü *Daten » Log* auf Einträge zu *myToys* mit dem Level *Debug* klicken. So werden die Einträge aufgeklappt und genauere Angaben zu fehlenden Pflichtfeldern angezeigt.
+Nach dem nächsten Export kannst du im Menü *Daten » Log* auf Einträge zu *myToys* mit dem Level *Info* klicken. So werden die Einträge aufgeklappt und genauere Angaben zu fehlenden Pflichtfeldern angezeigt.
 
 [.instruction]
 Varianten mit fehlenden Pflichtfeldern finden:
@@ -868,8 +868,7 @@ Varianten mit fehlenden Pflichtfeldern finden:
 . Öffne das Menü *Daten » Log*.
 . Wähle links in der Spalte die folgenden Filter:
   * Integration *myToys*
-  * Level *Debug*
-  * Referenztyp *variationId*
+  * Identifikator *MyToys\Components\Catalog\CatalogComponent::logEmptyRequiredFields*
 . Klicke auf *Suchen* (icon:search[role="blue"]). +
 → Alle Varianten mit fehlenden Pflichtfeldern werden angezeigt.
 . Klicke auf eine Meldung, um Details anzuzeigen. +
