tracdelight to catalogue - DE

--- a/docs/de-de/modules/maerkte/pages/kelkoo.adoc
+++ b/docs/de-de/modules/maerkte/pages/kelkoo.adoc
@@ -4,6 +4,8 @@
 :description: Multi-Channel in plentymarkets: Richte die Artikeldatenübertragung zum Preisportal Kelkoo in deinem plentymarkets System ein.
 :id: MLKIIIX
 
+:kelkoo:
+:market: Kelkoo
 :price-search-engine: Kelkoo
 :plugin-name: Kelkoo
 :plugin-link: https://marketplace.plentymarkets.com/plugins/channels/preisportale/elasticexportkelkoode_5041
@@ -160,8 +162,6 @@ include::partial$kelkoo-recommended-mappings.adoc[]
 [#filter-export]
 ==== _Optional:_ Nur bestimmte Artikel exportieren
 
-:market: Kelkoo
-
 include::partial$catalogue-filters.adoc[]
 
 [#catalogue-settings]
@@ -174,7 +174,6 @@ include::partial$catalogue-settings.adoc[]
 ===== Katalog aktivieren
 
 :interval:
-:market: Kelkoo
 
 include::partial$catalogue-activation.adoc[]
 
