Added long lead time setting

--- a/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
+++ b/docs/de-de/modules/maerkte/partials/amz-einrichtungsmenue.adoc
@@ -199,6 +199,10 @@ Artikel mit der Einstellung *Beschränkung auf Netto-Warenbestand* werden hier n
 | *Bearbeitungszeit*
 | Lieferverzugsaufschlag in Tagen eingeben. Wird nur angezeigt, wenn bei *Durchschnittliche Lieferzeit* die Option *"Mittlere Lieferzeit in Tagen" übermitteln + Bearbeitungszeit* gewählt wurde.
 
+| *Verlängerte Bearbeitungszeit aktivieren*
+| *Ja* wählen, um die maximale Bearbeitungszeit von Amazon-Aufträgen von 30 auf bis zu 120 Tage zu erhöhen. +
+*_Hinweis:_* Diese Einstellung kann nur aktiviert werden, nachdem du auf Amazon dafür freigeschaltet wurdest.
+
 | *Artikelnummer des Herstellers*
 | Wählen, ob SKU, Variantennummer, GTIN, Varianten-ID, Externe Varianten-ID, Modellnummer oder kein Wert im Feld part_number der CSV-Datei übertragen werden soll.
 
