Fixed broken links

--- a/docs/en-gb/modules/markets/pages/amazon-faq-collection.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-faq-collection.adoc
@@ -8,7 +8,7 @@ plentymarkets is packed with functionalities for listing your products on Amazon
 
 == FAQ on variation exports
 
-* <<markets/amazon/best-practices-amazon-item-data-export#, Why is my item not exported to Amazon?>>
+* xref:markets:best-practices-amazon-item-data-export.adoc[Why is my item not exported to Amazon?]
   ** xref:markets:best-practices-amazon-item-data-export.adoc#100[How to find out if an item was not exported]
   ** xref:markets:best-practices-amazon-item-data-export.adoc#260[How to test if the item was exported]
 
@@ -22,11 +22,11 @@ plentymarkets is packed with functionalities for listing your products on Amazon
 
 == FAQ for price synchronisations
 
-* <<markets/amazon/preparing-variations#67001, Which settings do I have to activate so that prices are exported to Amazon?>>
+* xref:markets:preparing-variations.adoc#67001[Which settings do I have to activate so that prices are exported to Amazon?]
 
 == FAQ for stock synchronisations
 
-* <<markets/amazon/preparing-variations#67002, Which settings do I have to activate so that stock is exported to Amazon?>>
+* xref:markets:preparing-variations.adoc#67002[Which settings do I have to activate so that stock is exported to Amazon?]
 
 
 == Frequent error messages
@@ -58,7 +58,7 @@ a| * Request is throttled
 
 == List of best practices
 
-* <<markets/amazon/best-practices-amazon-vcs: Using Amazon’s VAT calculation service VCS>>
+* xref:markets:best-practices-amazon-vcs.adoc[Using Amazon’s VAT calculation service VCS]
 * xref:markets:best-practices-amazon-prime.adoc#[Best Practice: Amazon Prime]
-    ** <<markets/amazon/best-practices-amazon-prime#100, How are Prime orders processed in plentymarkets?>>
+    ** xref:markets:best-practices-amazon-prime.adoc#100[How are Prime orders processed in plentymarkets?]
     ** xref:markets:best-practices-amazon-prime.adoc#200[Amazon Prime: Errors and how to solve them]
