--- a/docs/de-de/modules/maerkte/pages/amazon-faq-sammlung.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-faq-sammlung.adoc
@@ -8,9 +8,9 @@ plentymarkets bietet dir umfassende Möglichkeiten, deine Produkte bei Amazon zu
 
 == FAQ zum Variantenexport
 
-* <<maerkte/amazon/best-practices-amazon-artikeldatenexport#, Warum wird mein Artikel nicht zu Amazon exportiert?>>
-  ** <<maerkte/amazon/best-practices-amazon-artikeldatenexport#100, Wie erkenne ich, ob ein Artikel nicht exportiert wurde?>>
-  ** <<maerkte/amazon/best-practices-amazon-artikeldatenexport#260, Wie kann ich testen, ob der Artikel exportiert wurde?>>
+* xref:main@manual:maerkte:best-practices-amazon-artikeldatenexport.adoc[Warum wird mein Artikel nicht zu Amazon exportiert?]
+  ** xref:main@manual:maerkte:best-practices-amazon-artikeldatenexport.adoc#100[Wie erkenne ich, ob ein Artikel nicht exportiert wurde?]
+  ** xref:main@manual:maerkte:best-practices-amazon-artikeldatenexport.adoc#260[Wie kann ich testen, ob der Artikel exportiert wurde?]
 
 == FAQ zu Amazon MFN
 
@@ -22,13 +22,13 @@ plentymarkets bietet dir umfassende Möglichkeiten, deine Produkte bei Amazon zu
 
 == FAQ zum Preisabgleich
 
-* <<maerkte/amazon/varianten-vorbereiten#67001, Welche Einstellungen muss ich vornehmen, damit Preise an Amazon übermittelt werden?>>
+* xref:maerkte:varianten-vorbereiten.adoc#67001[Welche Einstellungen muss ich vornehmen, damit Preise an Amazon übermittelt werden?]
 
 == FAQ zum Bestandsabgleich
 
-* <<maerkte/amazon/varianten-vorbereiten#67002, Welche Einstellungen muss ich vornehmen, damit Bestände an Amazon übermittelt werden?>>
-* <<maerkte/amazon/best-practices-amazon-fba-bestandsanzeige#300, Können Bestände für Artikel/Varianten auch separat pro Lagerland dargestellt werden?>>
-* <<maerkte/amazon/best-practices-amazon-fba-bestandsanzeige#400, Benötige ich zwingend ein europäisches Verkäuferkonto, um meine FBA-Bestände importieren zu können?>>
+* xref:maerkte:varianten-vorbereiten.adoc#67002[Welche Einstellungen muss ich vornehmen, damit Bestände an Amazon übermittelt werden?]
+* xref:maerkte:best-practices-amazon-fba-bestandsanzeige.adoc#300[Können Bestände für Artikel/Varianten auch separat pro Lagerland dargestellt werden?]
+* xref:maerkte:best-practices-amazon-fba-bestandsanzeige.adoc#400[Benötige ich zwingend ein europäisches Verkäuferkonto, um meine FBA-Bestände importieren zu können?]
 
 
 == Häufige Fehlermeldungen
@@ -62,6 +62,6 @@ a| * Request is throttled
 
 * xref:maerkte:best-practices-amazon-vcs.adoc#[Best Practice: Rechnungsservice VCS nutzen]
 * xref:maerkte:best-practices-amazon-prime.adoc#[Best Practice: Amazon Prime]
-    ** <<maerkte/amazon/best-practices-amazon-prime#100, Wie sieht der Verlauf eines Prime-Auftrags bei uns aus?>>
+    ** xref:maerkte:best-practices-amazon-prime.adoc#100[Wie sieht der Verlauf eines Prime-Auftrags bei uns aus?]
     ** xref:maerkte:best-practices-amazon-prime.adoc#200[Fehlermeldungen und wie sie gelöst werden können]
 * xref:maerkte:best-practices-amazon-fba-bestandsanzeige.adoc#[Best Practice: Bestandsanzeige Amazon FBA für EU und UK]
