CHANGE a few more small issues

--- a/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
+++ b/docs/de-de/modules/business-entscheidungen/pages/prohandel.adoc
@@ -6,7 +6,14 @@
 :author: gretchen-bates
 
 ////
-zuletzt bearbeitet 04.04.2022
+zuletzt bearbeitet 05.04.2022
+
+Interner Hinweis zur Seite:
+Diese Seite richtet sich in erster Linie am plenty-Einrichtungs-Team.
+Es ist sehr unwahrscheinlich, dass ein bestehender plenty-Kunde sich spontan entscheidet Prohandel zu nutzen und versucht das Plugin selbst einzurichten.
+Viel eher ist der Anwendungsfall, dass ein Händler bereits Prohandel nutzt (z.B. für sein Mode-Einzelhandel).
+Der Händler möchte seine Ware zukünftig auch online verkaufen und entscheidet sich für plenty (u.a. weil wir diese Schnittstelle haben).
+Der Händler wäre also ganz neu bei plenty und würde sein System samt Prohandel-Plugin zusammen mit dem Einrichtungs-Team einrichten.
 ////
 
 //ToDo - change position to 60 once it should appear in the navigation
@@ -650,10 +657,7 @@ Zum Beispiel kannst du:
 Eine vollständige Liste aller Artikeldatenfelder in plentymarkets findest du auf der Handbuchseite xref:artikel:artikel-verwalten.adoc#[Verzeichnis der Datenfelder].
 
 [#150]
-== Aufträge und Ereignisaktionen
-
-[#155]
-=== Aufträge abwickeln
+== Aufträge abwickeln
 
 Wenn ein Produkt verkauft wird, landen die Auftragsdaten zunächst im plentymarkets Menü *Aufträge » Aufträge bearbeiten*.
 Hier kann der Auftrag abgewickelt werden und sein Fortschritt mit Hilfe eines Status verfolgt werden.
@@ -661,7 +665,7 @@ Hier kann der Auftrag abgewickelt werden und sein Fortschritt mit Hilfe eines St
 Weitere Informationen zur Auftragsbearbeitung in plentymarkets findest du auf der Handbuchseite xref:auftraege:auftraege-verwalten.adoc#[Aufträge verwalten].
 
 [#160]
-=== Ereignisaktionen einrichten
+== Ereignisaktionen einrichten
 
 Natürlich sollen die Auftragsdaten nicht nur in plentymarkets bleiben, sondern auch nach Prohandel übertragen werden.
 Dazu musst du vier sogenannte Ereignisaktionen einrichten.
@@ -687,7 +691,7 @@ Ab dem Zeitpunkt der Aktivierung greift die Ereignisaktion mit den von dir gewä
 Weitere Informationen zur allgemeinen Verwendung von Ereignisaktionen findest du auf der Handbuchseite xref:automatisierung:ereignisaktionen.adoc#[Ereignisaktionen].
 
 [#170]
-==== Prohandel über neue Aufträge benachrichtigen
+=== Prohandel über neue Aufträge benachrichtigen
 
 Sobald ein neuer Auftrag in plentymarkets landet, soll Prohandel über den Auftrag informiert werden.
 So wird der nötige Bestand in Prohandel reserviert, damit es nicht zu einem Überverkauf kommt.
@@ -708,7 +712,7 @@ Auftrag > Mandant (Shop)
 |====
 
 [#180]
-==== Prohandel über Zahlung und Versand benachrichtigen
+=== Prohandel über Zahlung und Versand benachrichtigen
 
 Fertig abgewickelte Aufträge befinden sich im Status 7.
 Dieser Status bedeutet, dass die Zahlung eingegangen ist und der Warenausgang gebucht wurde.
@@ -730,15 +734,17 @@ Auftrag > Mandant (Shop)
 |====
 
 [#190]
-==== Prohandel über Stornierungen benachrichtigen
+=== Prohandel über Stornierungen benachrichtigen
 
 Eine Stornierung:
 
 * bedeutet, dass der:die Kund:in es sich anders überlegt hat und den gekauften Artikel doch nicht haben möchte.
 * erfolgt, bevor du die Zahlung erhalten und die Ware verschickt hast.
+* kann als Aufhebung der Bestandsreservierung verstanden werden.
+plentymarkets teilt Prohandel mit, dass die erhaltene Bestandsreservierung nichtig ist.
 
 Um einen Auftrag zu stornieren, änderst du seinen Status auf 8.
-Zu diesem Zeitpunkt soll Prohandel auch über die Stornierung informiert werden, damit der Bestand nicht länger reserviert wird.
+Zu diesem Zeitpunkt soll Prohandel über die Stornierung informiert werden, damit der Bestand nicht länger reserviert wird.
 
 [[table-event-procedure-three]]
 [cols="1,2"]
@@ -756,7 +762,7 @@ Auftrag > Mandant (Shop)
 |====
 
 [#200]
-==== Prohandel über Retouren benachrichtigen
+=== Prohandel über Retouren benachrichtigen
 
 Eine Retoure:
 
