Add house number to address portlet

--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -420,6 +420,7 @@ Click on *Configure columns* (icon:settings[set=material]) on the top right and 
 * First name
 * Last name
 * Street
+* House number
 * Postcode
 * Town 
 * Country
