some updates on contact pages

--- a/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-suchen.adoc
@@ -166,7 +166,7 @@ Klicke in der Übersicht oben rechts auf *Spalten konfigurieren* icon:settings[s
 * Fax
 * Newsletter
 * Tags
-* Benutzer
+* Eigner
 * Kontextmenü
 ** Welche Funktionen dir über das Kontextmenü zur Verfügung stehen, erfährst du im Kapitel <<#kontextmenue-uebersicht, Kontextmenü in der Übersicht>>.
 
