--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -195,9 +195,12 @@ Alle im Kontaktdatensatz verfügbaren Bereiche und deren Funktionen werden in de
 // TODO: Screenshot von der Side Nav einfügen, wenn sie final ist.
 
 [TIP]
+.Wie werden die Daten in den einzelnen Bereichen geladen?
+====
 Wenn du im Kontaktdatensatz auf der linken Seite in der Navigation auf den jeweiligen Bereich klickst, den du bearbeiten möchtest, leuchtet dieser Bereich kurz in blau auf, die vorhandenen Daten für diesen Bereich werden geladen und du kannst direkt mit der Bearbeitung beginnen. +
 *_Hinweis:_* Die folgenden Bereiche werden bereits beim Öffnen des Kontaktdatensatzes initial geladen und geöffnet: *Kontaktdetails*, *Primäre Adresse*, *Aufträge* und *Optionen*. +
 Die folgenden Bereiche werden erst nach einem Klick in der Navigation auf der linken Seite geladen und geöffnet: *Dokumente*, *Eigenschaften*, *Tags*, *plentyShop-Login*, *Adressen*, *Historie*, *Bankdaten*, *Konto*, *Messenger*, und *Tickets*. 
+====
 
 * <<#kontaktdetails, Kontaktdetails>>
 * <<#primaere-adresse, Primäre Adresse>>
@@ -783,7 +786,7 @@ Kontoübersicht anzeigen:
 . Suche den Kontakt, den du bearbeiten möchtest, anhand der Filtereinstellungen. Beachte dazu die Erläuterungen zu den Filtern auf der Seite xref:crm:kontakt-suchen.adoc#[Kontakt suchen]. +
 → Die Kontakte, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Kontakts, um den Datensatz zu öffnen.
-. Klicke auf der linken Seite auf *Konto*.
+. Klicke auf der linken Seite auf *Konto*. +
 → Alle verfügbaren Daten zum Kontostand des Kontakts werden angezeigt.
 . Beachte dazu die Erläuterungen in <<#table-amounts-contact>> und <<#table-account-balance-contact>>.
 
@@ -916,11 +919,11 @@ Dir stehen verschiedene Filter zur Verfügung, um spezifische Informationen zum 
 |[#intable-account-filter-payment-status]*Zahlungsstatus*
 |Suche nach allen Aufträgen, die sich in einem bestimmten Zahlungsstatus befinden. Zum Beispiel kannst du alle Aufträge suchen, die teilbezahlt sind. Zur Auswahl stehen die Zahlungsstatus ausstehend, teilbezahlt, bezahlt und überbezahlt.
 
-|[#intable-account-filter-search]*Suchen*
-|Mit einem Klick auf icon:search[role="blue"] werden die gefundenen Kontodaten aufgelistet.
+|[#intable-account-filter-reset]*ZURÜCKSETZEN*
+|SSetzt die gewählten Filterkriterien zurück.
 
-|[#intable-account-filter-reset]*Zurücksetzen*
-|Mit einem Klick auf icon:undo[role="orange"] werden die eingestellten Filterkriterien zurückgesetzt.
+|[#intable-account-filter-search]*SUCHEN*
+|Führt die Suche aus. Die gefundenen Kontodaten werden in der Übersicht angezeigt.
 
 |====
 
@@ -1228,8 +1231,9 @@ Du hast jedoch die Möglichkeit, den Datensatz zu anonymisieren. Wie du dazu vor
 ====
 
 [#kontakt-loeschen-uebersicht]
-[discrete]
 === Kontakt in der Übersicht löschen
+
+Gehe wie im Folgenden beschrieben vor, um einen Kontakt in der Übersicht zu löschen.
 
 [.instruction]
 Kontakt in der Übersicht löschen:
@@ -1245,8 +1249,9 @@ Kontakt in der Übersicht löschen:
 → Der Kontakt wird gelöscht und aus der Übersicht entfernt.
 
 [#kontakt-loeschen-detailansicht]
-[discrete]
 === Kontakt in der Detailansicht löschen
+
+Gehe wie im Folgenden beschrieben vor, um einen Kontakt in der Detailansicht zu löschen.
 
 [.instruction]
 Kontakt in der Detailansicht löschen:
