--- a/docs/en-gb/modules/crm/pages/search-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/search-contact.adoc
@@ -135,17 +135,17 @@ If you want to set another filter as default filter, deactivate the currently se
 Click in the overview on the top right on *Configure columns* icon:settings[set=material], select the desired columns and click on *Confirm*. The following columns are available:
 
 * ID
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on their ID.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on their ID.
 * Guest
 ** Shows with the icon icon:done[set=material] whether this data record is a guest.
 * Company
 ** Click on the company name to open the company data record in the *CRM » Companies* menu.
 * Rating
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on the number of stars in their rating.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on the number of stars in their rating.
 * First name
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in alphabetical order based on their first names.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in alphabetical order based on their first names.
 * Last name
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in alphabetical order based on their last names.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in alphabetical order based on their last names.
 * Email
 ** Click on the email address to copy it to the clipboard.
 * Telephone
@@ -153,18 +153,20 @@ Click in the overview on the top right on *Configure columns* icon:settings[set=
 * Customer class
 * External ID
 * Orders
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on their number of orders.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on their number of orders.
 * Postcode
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on their postcodes.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on their postcodes.
 * Country
 * Type
 * Client
 * Debtor account
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on the debtor account number.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in ascending and descending order based on the debtor account number.
 * Language
-** Sort your contacts using the arrows icon:arrow-upward[set=material] and icon:arrow_downward[set=material] in alphabetical order based on their languages.
+** Sort your contacts using the arrows icon:arrow_upward[set=material] and icon:arrow_downward[set=material] in alphabetical order based on their languages.
 * Fax
 * Newsletter
+* Tags
+* Owner
 * Context menu
 ** Refer to the chapter <<#context-menu-overview, Context menu in the overview>> to learn more about the available functions in the context menu.
 
