Fix links for import types newsletter and coupon code

--- a/docs/de-de/modules/daten/pages/elasticSync-gutschein-codes.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-gutschein-codes.adoc
@@ -53,7 +53,7 @@ Gib den Gutschein-Code in deine CSV-Datei ein.
 
 *_Zulässige Importwerte:_* Alphanumerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:auftraege:gutscheine.adoc#gutschein-codes-generieren[*Aufträge » Gutscheine » [Kampagne öffnen]* im Tab *Codes*].
+Das Ergebnis des Imports findest du im Backend im Menü xref:auftraege:gutscheine.adoc#gutschein-codes-generieren[*Aufträge » Gutscheine » [Kampagne öffnen\]* im Tab *Codes*].
 
 '''
 
@@ -95,7 +95,7 @@ Beim Import wird _nicht_ der Restwert des Gutscheins importiert, sondern der ber
 
 *_Zulässige Importwerte:_* Numerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:auftraege:gutscheine.adoc#gutschein-codes-generieren[*Aufträge » Gutscheine » [Kampagne öffnen]* im Tab *Codes*].
+Das Ergebnis des Imports findest du im Backend im Menü xref:auftraege:gutscheine.adoc#gutschein-codes-generieren[*Aufträge » Gutscheine » [Kampagne öffnen\]* im Tab *Codes*].
 
 *_Beispiel:_* Der Gutschein hat einen Wert über 100,00 EUR. Der Kunde löst 80,00 EUR ein. Somit beträgt der Restwert 20,00 EUR. Der Wert, der mit diesem Zuordnungsfeld importiert wird, beträgt 80,00 EUR.
 
