--- a/docs/de-de/modules/daten/pages/elasticSync-newsletter-empfaenger.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-newsletter-empfaenger.adoc
@@ -56,7 +56,7 @@ Gib die ID der E-Mail-Adresse, an die der Newsletter gesendet wird, in deine CSV
 
 *_Zulässige Importwerte:_* Numerisch (interne ID)
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen]*], nachdem du die Suche (icon:search[role="blue"]) ausgeführt hast.
+Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen\]*], nachdem du die Suche (icon:search[role="blue"]) ausgeführt hast.
 
 '''
 
@@ -71,7 +71,7 @@ Gib die ID des Ordners, in dem die E-Mail-Adresse des Newsletter-Empfängers ges
 
 *_Zulässige Importwerte:_* Numerisch (interne ID)
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails* in der Übersicht *E-Mails pro Ordner*].
+Das Ergebnis des Imports findest du im Backend im Menü *Einrichtung » CRM » Newsletter » E-Mails in der xref:crm:newsletter-versenden.adoc#[Übersicht *E-Mails pro Ordner*].
 
 '''
 
@@ -95,7 +95,7 @@ Gib den Vornamen der Person, die den Newsletter erhalten soll, in deine CSV-Date
 
 *_Zulässige Importwerte:_* Text
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen]*]. Dann die Suche (icon:search[role="blue"]) ausführen und den Datensatz aufklappen (icon:plus-square-o[]). Der Wert ist im Feld *Vorname* gespeichert.
+Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen\]*]. Führe dann die Suche (icon:search[role="blue"]) aus und klappe den Datensatz auf (icon:plus-square-o[]). Der Wert ist im Feld *Vorname* gespeichert.
 
 '''
 
@@ -108,7 +108,7 @@ Gib den Nachnamen der Person, die den Newsletter erhalten soll, in deine CSV-Dat
 
 *_Zulässige Importwerte:_* Text
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen]*]. Dann die Suche (icon:search[role="blue"]) ausführen und den Datensatz aufklappen (icon:plus-square-o[]). Der Wert ist im Feld *Nachname* gespeichert.
+Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen\]*]. Führe dann die Suche (icon:search[role="blue"]) aus und klappe den Datensatz auf (icon:plus-square-o[]). Der Wert ist im Feld *Nachname* gespeichert.
 
 '''
 
@@ -121,7 +121,7 @@ Gib die E-Mail-Adresse der Person, die den Newsletter erhalten soll, in deine CS
 
 *_Zulässige Importwerte:_* Alphanumerisch
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen]*]. Dann die Suche (icon:search[role="blue"]) ausführen und den Datensatz aufklappen (icon:plus-square-o[]). Der Wert ist im Feld *E-Mail* gespeichert.
+Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen\]*]. Führe dann die Suche (icon:search[role="blue"]) aus und klappe den Datensatz auf (icon:plus-square-o[]). Der Wert ist im Feld *E-Mail* gespeichert.
 
 '''
 
@@ -179,7 +179,7 @@ Gib das Datum, an dem die Person den Erhalt des Newsletters bestätigt hat, in d
 
 *_Zulässige Importwerte:_* Datum
 
-Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen]*]. Dann die Suche (icon:search[role="blue"]) ausführen und den Datensatz aufklappen (icon:plus-square-o[]). Der Wert ist im Feld *Bestätigt am* gespeichert.
+Das Ergebnis des Imports findest du im Backend im Menü xref:crm:newsletter-versenden.adoc#[*Einrichtung » CRM » Newsletter » E-Mails » [Ordner aufklappen\]*]. Führe dann die Suche (icon:search[role="blue"]) aus und klappe den Datensatz auf (icon:plus-square-o[]). Der Wert ist im Feld *Bestätigt am* gespeichert.
 
 '''
 
