--- a/docs/en-gb/modules/data/pages/elasticSync-coupon-codes.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-coupon-codes.adoc
@@ -53,7 +53,7 @@ Enter the coupon code into your CSV file.
 
 *_Permitted import values:_* Alpha-numeric
 
-You can find the result of the import in the back end menu xref:orders:coupons.adoc#generate-coupon-codes[*Orders » Coupons » [Open campaign]* in the *Codes* tab].
+You can find the result of the import in the back end menu xref:orders:coupons.adoc#generate-coupon-codes[*Orders » Coupons » [Open campaign\]* in the *Codes* tab].
 
 '''
 
@@ -95,7 +95,7 @@ During import, _not_ the residual balance of the coupon is imported, but the amo
 
 *_Permitted import values:_* Numeric
 
-You can find the result of the import in the back end menu xref:orders:coupons.adoc#generate-coupon-codes[*Orders » Coupons » [Open campaign] in the *Codes* tab].
+You can find the result of the import in the back end menu xref:orders:coupons.adoc#generate-coupon-codes[*Orders » Coupons » [Open campaign\] in the *Codes* tab].
 
 *_Example:_* The coupon has a value of EUR 100.00. The customer redeems EUR 80.00 of it. Thus, the residual balance is EUR 20.00. The value that is imported with this mapping field, is EUR 80.00.
 
