--- a/docs/de-de/modules/crm/pages/emailbuilder.adoc
+++ b/docs/de-de/modules/crm/pages/emailbuilder.adoc
@@ -762,7 +762,7 @@ Erfahre in den folgenden Unterkapiteln, welche Variablen dir zur Verfügung steh
 [#verfuegbare-variablen]
 === Verfügbare Variablen
 
-Die verfügbaren Variablen für den EmailBuilder sind in verschiedene Kategorien bzw. Unterkategorien gruppiert:
+Die verfügbaren Variablen für den EmailBuilder sind in die folgenden Kategorien bzw. Unterkategorien gruppiert. Klicke auf einen Eintrag in der Liste, um direkt zu dem Bereich zu gelangen, in dem die Variablen sowie die dazugehörigen twig expressions für die jeweilige Kategorie bzw. Unterkategorie aufgelistet sind.
 
 * <<#variablen-auftrag, Auftrag>>
 
@@ -783,8 +783,6 @@ Die verfügbaren Variablen für den EmailBuilder sind in verschiedene Kategorien
 
 * <<#variablen-newsletter, Newsletter>>
 
-Möchtest du wissen, welche Variablen für die einzelnen Kategorien und Unterkategorien zur Verfügung stehen und wie die twig expressions lauten, die du im Code-Widget und im Betreff einer Vorlage verwenden kannst? Dann klappe weiter unten die jeweiligen Bereiche mit einem Klick auf icon:expand_more[set=material] einfach auf.
-
 [#twig-einleitung]
 === Twig expressions für das Code-Widget und den Betreff
 
@@ -804,7 +802,7 @@ Wenn du im Code-Widget beispielsweise mit link:https://twig.symfony.com/doc/3.x/
 
 Im Kapitel <<#code-beispiele-code-widget, Code-Beispiele für das Code-Wigdet>> findest du einige if-Abfragen, die du einfach in dein Code-Widget kopieren kannst.
 
-Möchtest du wissen, welche Variablen für die einzelnen Kategorien und Unterkategorien zur Verfügung stehen und wie die twig expressions lauten, die du im Code-Widget verwenden kannst? Dann klappe jeweils die folgenden Bereiche mit einem Klick auf icon:expand_more[set=material] einfach auf.
+Möchtest du wissen, welche Variablen für die einzelnen Kategorien und Unterkategorien zur Verfügung stehen und wie die twig expressions lauten, die du im Code-Widget verwenden kannst? Dann klappe einfach die folgenden Bereiche auf (icon:expand_more[set=material]).
 
 [#variablen-auftrag]
 [.collapseBox]
